@@ -3,6 +3,7 @@ package com.hcmus.mentor.backend.domain;
 import com.hcmus.mentor.backend.controller.payload.request.CreateVoteRequest;
 import com.hcmus.mentor.backend.controller.payload.request.DoVotingRequest;
 import com.hcmus.mentor.backend.controller.payload.request.UpdateVoteRequest;
+import com.hcmus.mentor.backend.domain.dto.ChoiceDto;
 import lombok.*;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
@@ -10,8 +11,6 @@ import org.springframework.data.mongodb.core.mapping.Document;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -27,7 +26,7 @@ public class Vote {
     private String question;
 
     @Builder.Default
-    private List<Choice> choices = new ArrayList<>();
+    private List<ChoiceDto> choices = new ArrayList<>();
 
     private String groupId;
 
@@ -53,7 +52,7 @@ public class Vote {
                 .build();
     }
 
-    public Choice getChoice(String id) {
+    public ChoiceDto getChoice(String id) {
         return choices.stream().filter(choice -> choice.getId().equals(id)).findFirst().orElse(null);
     }
 
@@ -61,8 +60,8 @@ public class Vote {
         this.question = request.getQuestion();
         this.timeEnd = request.getTimeEnd();
 
-        for (Choice newChoice : request.getChoices()) {
-            Choice oldChoice = getChoice(newChoice.getId());
+        for (ChoiceDto newChoice : request.getChoices()) {
+            ChoiceDto oldChoice = getChoice(newChoice.getId());
             if (oldChoice == null) {
                 choices.add(newChoice);
             } else {
@@ -74,19 +73,16 @@ public class Vote {
     public void doVoting(DoVotingRequest request) {
         String voterId = request.getVoterId();
         choices.forEach(choice -> choice.removeVoting(voterId));
-        request
-                .getChoices()
-                .forEach(
-                        choice -> {
-                            Choice oldChoice = getChoice(choice.getId());
-                            if (oldChoice == null) {
-                                choices.add(choice);
-                                return;
-                            }
-                            if (choice.getVoters().contains(voterId)) {
-                                oldChoice.doVoting(voterId);
-                            }
-                        });
+        request.getChoices().forEach(choice -> {
+            ChoiceDto oldChoice = getChoice(choice.getId());
+            if (oldChoice == null) {
+                choices.add(choice);
+                return;
+            }
+            if (choice.getVoters().contains(voterId)) {
+                oldChoice.doVoting(voterId);
+            }
+        });
         sortChoicesDesc();
     }
 
@@ -101,10 +97,9 @@ public class Vote {
     }
 
     public void sortChoicesDesc() {
-        List<Choice> newChoices =
-                choices.stream()
-                        .sorted((c1, c2) -> c2.getVoters().size() - c1.getVoters().size())
-                        .collect(Collectors.toList());
+        List<ChoiceDto> newChoices = choices.stream()
+                .sorted((c1, c2) -> c2.getVoters().size() - c1.getVoters().size())
+                .toList();
         setChoices(newChoices);
     }
 
@@ -113,38 +108,4 @@ public class Vote {
         CLOSED
     }
 
-    @Getter
-    @Setter
-    @AllArgsConstructor
-    @NoArgsConstructor
-    @Builder
-    public static class Choice {
-
-        @Builder.Default
-        private String id = UUID.randomUUID().toString();
-
-        private String name;
-
-        @Builder.Default
-        private List<String> voters = new ArrayList<>();
-
-        public static Choice from(String name) {
-            return Choice.builder().name(name).build();
-        }
-
-        public void update(Choice choice) {
-            setName(choice.getName());
-        }
-
-        public void removeVoting(String voterId) {
-            voters.remove(voterId);
-        }
-
-        public void doVoting(String voterId) {
-            if (voters.contains(voterId)) {
-                return;
-            }
-            voters.add(voterId);
-        }
-    }
 }
