@@ -1,11 +1,5 @@
 package com.hcmus.mentor.backend.service;
 
-import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPermissionCode.INVALID_PERMISSION;
-import static com.hcmus.mentor.backend.controller.payload.returnCode.SuccessCode.SUCCESS;
-import static com.hcmus.mentor.backend.controller.payload.returnCode.TaskReturnCode.*;
-
-import com.hcmus.mentor.backend.domain.*;
-import com.hcmus.mentor.backend.domain.method.IRemindable;
 import com.hcmus.mentor.backend.controller.payload.request.AddTaskRequest;
 import com.hcmus.mentor.backend.controller.payload.request.UpdateStatusByMentorRequest;
 import com.hcmus.mentor.backend.controller.payload.request.UpdateTaskRequest;
@@ -15,24 +9,20 @@ import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskAssigneeRe
 import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskDetailResponse;
 import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskResponse;
 import com.hcmus.mentor.backend.controller.payload.response.users.ProfileResponse;
+import com.hcmus.mentor.backend.domain.*;
+import com.hcmus.mentor.backend.domain.constant.TaskStatus;
+import com.hcmus.mentor.backend.domain.dto.AssigneeDto;
+import com.hcmus.mentor.backend.domain.method.IRemindable;
 import com.hcmus.mentor.backend.repository.GroupRepository;
 import com.hcmus.mentor.backend.repository.ReminderRepository;
 import com.hcmus.mentor.backend.repository.TaskRepository;
 import com.hcmus.mentor.backend.repository.UserRepository;
-import com.hcmus.mentor.backend.security.UserPrincipal;
+import com.hcmus.mentor.backend.security.principal.userdetails.CustomerUserDetails;
 import com.hcmus.mentor.backend.util.DateUtils;
-
-import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.function.Function;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import lombok.Setter;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -41,8 +31,21 @@ import org.springframework.data.mongodb.core.aggregation.MatchOperation;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.stereotype.Service;
 
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPermissionCode.INVALID_PERMISSION;
+import static com.hcmus.mentor.backend.controller.payload.returnCode.SuccessCode.SUCCESS;
+import static com.hcmus.mentor.backend.controller.payload.returnCode.TaskReturnCode.*;
+
 @Service
+@RequiredArgsConstructor
 public class TaskServiceImpl implements IRemindableService {
+
     private final TaskRepository taskRepository;
     private final PermissionService permissionService;
     private final GroupRepository groupRepository;
@@ -53,29 +56,6 @@ public class TaskServiceImpl implements IRemindableService {
     private final SocketIOService socketIOService;
     private final ReminderRepository reminderRepository;
     private final NotificationService notificationService;
-
-    public TaskServiceImpl(
-            TaskRepository taskRepository,
-            PermissionService permissionService,
-            GroupRepository groupRepository,
-            UserRepository userRepository,
-            MongoTemplate mongoTemplate,
-            @Lazy GroupService groupService,
-            @Lazy MessageService messageService,
-            SocketIOService socketIOService,
-            ReminderRepository reminderRepository,
-            NotificationService notificationService) {
-        this.taskRepository = taskRepository;
-        this.permissionService = permissionService;
-        this.groupRepository = groupRepository;
-        this.userRepository = userRepository;
-        this.mongoTemplate = mongoTemplate;
-        this.groupService = groupService;
-        this.messageService = messageService;
-        this.socketIOService = socketIOService;
-        this.reminderRepository = reminderRepository;
-        this.notificationService = notificationService;
-    }
 
     public TaskReturnService addTask(String emailUser, AddTaskRequest request) {
         if (!groupRepository.existsById(request.getGroupId())) {
@@ -98,33 +78,29 @@ public class TaskServiceImpl implements IRemindableService {
             }
         }
 
-        List<String> userIds =
-                request.getUserIds().contains("*")
-                        ? groupService.findAllMenteeIdsGroup(request.getGroupId())
-                        : request.getUserIds();
+        List<String> userIds = request.getUserIds().contains("*")
+                ? groupService.findAllMenteeIdsGroup(request.getGroupId())
+                : request.getUserIds();
         Optional<User> assigner = userRepository.findByEmail(emailUser);
-        List<Task.Assignee> assigneeIds =
-                userIds.stream().map(Task::newTask).collect(Collectors.toList());
-        Task task =
-                Task.builder()
-                        .title(request.getTitle())
-                        .description(request.getDescription())
-                        .deadline(request.getDeadline())
-                        .groupId(request.getGroupId())
-                        .assignerId(assigner.map(User::getId).orElse(null))
-                        .parentTask(request.getParentTask())
-                        .assigneeIds(assigneeIds)
-                        .build();
+        List<AssigneeDto> assigneeIds = userIds.stream().map(Task::newTask).toList();
+        Task task = Task.builder()
+                .title(request.getTitle())
+                .description(request.getDescription())
+                .deadline(request.getDeadline())
+                .groupId(request.getGroupId())
+                .assignerId(assigner.map(User::getId).orElse(null))
+                .parentTask(request.getParentTask())
+                .assigneeIds(assigneeIds)
+                .build();
         taskRepository.save(task);
 
-        Message message =
-                Message.builder()
-                        .senderId(task.getAssignerId())
-                        .groupId(task.getGroupId())
-                        .createdDate(task.getCreatedDate())
-                        .type(Message.Type.TASK)
-                        .taskId(task.getId())
-                        .build();
+        Message message = Message.builder()
+                .senderId(task.getAssignerId())
+                .groupId(task.getGroupId())
+                .createdDate(task.getCreatedDate())
+                .type(Message.Type.TASK)
+                .taskId(task.getId())
+                .build();
         messageService.saveMessage(message);
 
         MessageDetailResponse response =
@@ -149,7 +125,7 @@ public class TaskServiceImpl implements IRemindableService {
                 tasks.stream()
                         .map(task -> generateTaskDetailFromTask(emailUser, task))
                         .sorted(Comparator.comparing(TaskDetailResponse::getCreatedDate).reversed())
-                        .collect(Collectors.toList());
+                        .toList();
         return new TaskReturnService(SUCCESS, "", taskDetailResponses);
     }
 
@@ -168,7 +144,7 @@ public class TaskServiceImpl implements IRemindableService {
         return new TaskReturnService(SUCCESS, "", taskDetailResponses);
     }
 
-    public TaskReturnService deleteTask(UserPrincipal user, String id) {
+    public TaskReturnService deleteTask(CustomerUserDetails user, String id) {
         Optional<Task> taskOptional = taskRepository.findById(id);
         if (!taskOptional.isPresent()) {
             return new TaskReturnService(NOT_FOUND, "Not found task", null);
@@ -215,11 +191,11 @@ public class TaskServiceImpl implements IRemindableService {
             return TaskDetailResponse.from(task, assigner, groupInfo, role, null);
         }
 
-        Task.Status status =
+        TaskStatus status =
                 task.getAssigneeIds().stream()
                         .filter(assignee -> assignee.getUserId().equals(userWrapper.get().getId()))
                         .findFirst()
-                        .map(Task.Assignee::getStatus)
+                        .map(AssigneeDto::getStatus)
                         .orElse(null);
         return TaskDetailResponse.from(task, assigner, groupInfo, role, status);
     }
@@ -270,33 +246,33 @@ public class TaskServiceImpl implements IRemindableService {
     }
 
     public List<TaskAssigneeResponse> getTaskAssignees(String taskId) {
-        Optional<Task> taskOptional = taskRepository.findById(taskId);
-        if (!taskOptional.isPresent()) {
+        Optional<Task> taskOpt = taskRepository.findById(taskId);
+        if (taskOpt.isEmpty()) {
             return Collections.emptyList();
         }
+        Task task = taskOpt.get();
 
-        Task task = taskOptional.get();
-        Optional<Group> groupWrapper = groupRepository.findById(task.getGroupId());
-        if (!groupWrapper.isPresent()) {
+        Optional<Group> groupOpt = groupRepository.findById(task.getGroupId());
+        if (groupOpt.isEmpty()) {
             return Collections.emptyList();
         }
-        Group group = groupWrapper.get();
-        List<String> assigneeIds =
-                task.getAssigneeIds().stream().map(Task.Assignee::getUserId).collect(Collectors.toList());
+        Group group = groupOpt.get();
+
+        List<String> assigneeIds = task.getAssigneeIds().stream()
+                .map(AssigneeDto::getUserId).toList();
+
         List<ProfileResponse> assignees = userRepository.findAllByIdIn(assigneeIds);
-        Map<String, Task.Status> statuses =
-                task.getAssigneeIds().stream()
-                        .collect(
-                                Collectors.toMap(
-                                        Task.Assignee::getUserId, Task.Assignee::getStatus, (s1, s2) -> s2));
+
+        Map<String, TaskStatus> statuses = task.getAssigneeIds().stream()
+                .collect(Collectors.toMap(AssigneeDto::getUserId, AssigneeDto::getStatus, (s1, s2) -> s2));
+
         return assignees.stream()
-                .map(
-                        assignee -> {
-                            Task.Status status = statuses.getOrDefault(assignee.getId(), null);
-                            boolean isMentor = group.isMentor(assignee.getId());
-                            return TaskAssigneeResponse.from(assignee, status, isMentor);
-                        })
-                .collect(Collectors.toList());
+                .map(assignee -> {
+                    TaskStatus status = statuses.getOrDefault(assignee.getId(), null);
+                    boolean isMentor = group.isMentor(assignee.getId());
+                    return TaskAssigneeResponse.from(assignee, status, isMentor);
+                })
+                .toList();
     }
 
     private boolean isAssigned(String emailUser, Task task) {
@@ -308,7 +284,7 @@ public class TaskServiceImpl implements IRemindableService {
         return taskRepository.existsByIdAndAssigneeIdsUserId(task.getId(), user.getId());
     }
 
-    public TaskReturnService updateStatus(String emailUser, String id, Task.Status status) {
+    public TaskReturnService updateStatus(String emailUser, String id, TaskStatus status) {
         Optional<Task> taskOptional = taskRepository.findById(id);
         if (!taskOptional.isPresent()) {
             return new TaskReturnService(NOT_FOUND, "Not found task", null);
@@ -358,7 +334,7 @@ public class TaskServiceImpl implements IRemindableService {
         return new TaskReturnService(SUCCESS, "", task);
     }
 
-    public TaskReturnService updateTask(UserPrincipal user, String id, UpdateTaskRequest request) {
+    public TaskReturnService updateTask(CustomerUserDetails user, String id, UpdateTaskRequest request) {
         Optional<Task> taskOptional = taskRepository.findById(id);
         if (!taskOptional.isPresent()) {
             return new TaskReturnService(NOT_FOUND, "Not found task", null);
@@ -392,10 +368,9 @@ public class TaskServiceImpl implements IRemindableService {
     }
 
     public List<TaskResponse> getMostRecentTasks(String userId) {
-        List<String> groupIds =
-                groupService.getAllActiveOwnGroups(userId).stream()
-                        .map(Group::getId)
-                        .collect(Collectors.toList());
+        List<String> groupIds = groupService.getAllActiveOwnGroups(userId).stream()
+                .map(Group::getId)
+                .toList();
         List<Task> tasks =
                 taskRepository
                         .findAllByGroupIdInAndAssigneeIdsUserIdInAndDeadlineGreaterThan(
@@ -405,25 +380,23 @@ public class TaskServiceImpl implements IRemindableService {
                                 PageRequest.of(0, 5, Sort.by("deadline").descending()))
                         .getContent();
         return tasks.stream()
-                .map(
-                        task -> {
-                            Group group = groupRepository.findById(task.getGroupId()).orElse(null);
-                            User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
-                            Task.Assignee assignee =
-                                    task.getAssigneeIds().stream()
-                                            .filter(a -> a.getUserId().equals(userId))
-                                            .findFirst()
-                                            .orElse(null);
-                            return TaskResponse.from(task, assigner, assignee, group);
-                        })
-                .collect(Collectors.toList());
+                .map(task -> {
+                    Group group = groupRepository.findById(task.getGroupId()).orElse(null);
+                    User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
+                    AssigneeDto assignee = task.getAssigneeIds().stream()
+                            .filter(a -> a.getUserId().equals(userId))
+                            .findFirst()
+                            .orElse(null);
+                    return TaskResponse.from(task, assigner, assignee, group);
+                })
+                .toList();
     }
 
     public List<Task> getAllOwnTasks(String userId) {
-        List<String> joinedGroupIds =
-                groupService.getAllActiveOwnGroups(userId).stream()
-                        .map(Group::getId)
-                        .collect(Collectors.toList());
+        List<String> joinedGroupIds = groupService.getAllActiveOwnGroups(userId).stream()
+                .map(Group::getId)
+                .toList();
+
         return taskRepository.findAllByGroupIdInAndAssigneeIdsUserIdIn(
                 joinedGroupIds, Arrays.asList("*", userId));
     }
@@ -438,16 +411,15 @@ public class TaskServiceImpl implements IRemindableService {
         List<String> joinedGroupIds =
                 groupService.getAllActiveOwnGroups(userId).stream()
                         .map(Group::getId)
-                        .collect(Collectors.toList());
-        MatchOperation match =
-                Aggregation.match(
-                        Criteria.where("groupId")
-                                .in(joinedGroupIds)
-                                .and("assigneeIds.userId")
-                                .in(Arrays.asList("*", userId))
-                                .and("deadline")
-                                .gte(startTime)
-                                .lte(endTime));
+                        .toList();
+        MatchOperation match = Aggregation.match(
+                Criteria.where("groupId")
+                        .in(joinedGroupIds)
+                        .and("assigneeIds.userId")
+                        .in(Arrays.asList("*", userId))
+                        .and("deadline")
+                        .gte(startTime)
+                        .lte(endTime));
         Aggregation aggregation = Aggregation.newAggregation(match);
         return mongoTemplate.aggregate(aggregation, "task", Task.class).getMappedResults();
     }
@@ -474,11 +446,10 @@ public class TaskServiceImpl implements IRemindableService {
 
         List<TaskResponse> assignedTask = getOwnAssignedTasks(groupId, userId);
         List<TaskResponse> assignedByMe = getAssignedByMeTasks(groupId, userId);
-        List<TaskResponse> ownTasks =
-                Stream.concat(assignedTask.stream(), assignedByMe.stream())
-                        .filter(distinctById(TaskResponse::getId))
-                        .sorted(Comparator.comparing(TaskResponse::getCreatedDate).reversed())
-                        .collect(Collectors.toList());
+        List<TaskResponse> ownTasks = Stream.concat(assignedTask.stream(), assignedByMe.stream())
+                .filter(distinctById(TaskResponse::getId))
+                .sorted(Comparator.comparing(TaskResponse::getCreatedDate).reversed())
+                .toList();
         return new TaskReturnService(SUCCESS, "", ownTasks);
     }
 
@@ -497,17 +468,15 @@ public class TaskServiceImpl implements IRemindableService {
                 taskRepository.findAllByGroupIdAndAssigneeIdsUserIdInOrderByCreatedDateDesc(
                         groupId, Arrays.asList("*", userId));
         return tasks.stream()
-                .map(
-                        task -> {
-                            User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
-                            Task.Assignee assignee =
-                                    task.getAssigneeIds().stream()
-                                            .filter(a -> a.getUserId().equals(userId))
-                                            .findFirst()
-                                            .orElse(null);
-                            return TaskResponse.from(task, assigner, assignee, groupWrapper.get());
-                        })
-                .collect(Collectors.toList());
+                .map(task -> {
+                    User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
+                    AssigneeDto assignee = task.getAssigneeIds().stream()
+                            .filter(a -> a.getUserId().equals(userId))
+                            .findFirst()
+                            .orElse(null);
+                    return TaskResponse.from(task, assigner, assignee, groupWrapper.get());
+                })
+                .toList();
     }
 
     public TaskReturnService wrapOwnAssignedTasks(String groupId, String userId) {
@@ -537,7 +506,7 @@ public class TaskServiceImpl implements IRemindableService {
                 taskRepository.findAllByGroupIdAndAssignerIdOrderByCreatedDateDesc(groupId, userId);
         return tasks.stream()
                 .map(task -> TaskResponse.from(task, assigner, null, groupWrapper.get()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TaskReturnService wrapAssignedByMeTasks(String groupId, String userId) {
@@ -562,7 +531,7 @@ public class TaskServiceImpl implements IRemindableService {
         Reminder reminder = remindable.toReminder();
         Task task = (Task) remindable;
         List<String> emailUsers = new ArrayList<>();
-        for (Task.Assignee assignee : task.getAssigneeIds()) {
+        for (AssigneeDto assignee : task.getAssigneeIds()) {
             Optional<User> userOptional = userRepository.findById(assignee.getUserId());
             if (userOptional.isPresent()) {
                 emailUsers.add(userOptional.get().getEmail());
@@ -572,32 +541,6 @@ public class TaskServiceImpl implements IRemindableService {
         reminder.setSubject("Bạn có 1 công việc sắp tới hạn");
         reminderRepository.save(reminder);
     }
-
-    //    @Override
-    //    public List<Reminder> findReminderToday() {
-    //        Calendar calendar = Calendar.getInstance();
-    //        calendar.setTime(new Date());
-    //        calendar.add(Calendar.DAY_OF_MONTH, 1);
-    //        Date tomorrow = calendar.getTime();
-    //        calendar.add(Calendar.DAY_OF_MONTH, 1);
-    //        Date afterTomorrow = calendar.getTime();
-    //
-    //        List<Task> tasks = taskRepository.findAllByDeadlineBetween(tomorrow, afterTomorrow);
-    //        List<Reminder> reminders = new ArrayList<>();
-    //        for(Task task: tasks){
-    //            Reminder reminder = task.toReminder();
-    //            List<String> emailUsers = new ArrayList<>();
-    //            for(Task.Assignee assignee: task.getAssigneeIds()){
-    //                Optional<User> userOptional = userRepository.findById(assignee.getUserId());
-    //                if(userOptional.isPresent()){
-    //                    emailUsers.add(userOptional.get().getEmail());
-    //                }
-    //            }
-    //            reminder.setRecipients(emailUsers);
-    //            reminders.add(reminder);
-    //        }
-    //        return reminders;
-    //    }
 
     @Getter
     @Setter
