@@ -1,9 +1,7 @@
 package com.hcmus.mentor.backend.service.impl;
 
-import com.hcmus.mentor.backend.controller.payload.request.groups.AddMenteesRequest;
-import com.hcmus.mentor.backend.controller.payload.request.groups.AddMentorsRequest;
-import com.hcmus.mentor.backend.controller.payload.request.groups.CreateGroupRequest;
-import com.hcmus.mentor.backend.controller.payload.request.groups.UpdateGroupRequest;
+import com.hcmus.mentor.backend.controller.exception.DomainException;
+import com.hcmus.mentor.backend.controller.payload.request.groups.*;
 import com.hcmus.mentor.backend.controller.payload.response.ShortMediaMessage;
 import com.hcmus.mentor.backend.controller.payload.response.channel.ChannelForwardResponse;
 import com.hcmus.mentor.backend.controller.payload.response.groups.GroupDetailResponse;
@@ -15,22 +13,28 @@ import com.hcmus.mentor.backend.controller.payload.response.messages.MessageResp
 import com.hcmus.mentor.backend.controller.payload.response.users.ProfileResponse;
 import com.hcmus.mentor.backend.controller.payload.response.users.ShortProfile;
 import com.hcmus.mentor.backend.domain.*;
+import com.hcmus.mentor.backend.domain.constant.*;
 import com.hcmus.mentor.backend.repository.*;
-import com.hcmus.mentor.backend.security.UserPrincipal;
+import com.hcmus.mentor.backend.security.principal.userdetails.CustomerUserDetails;
 import com.hcmus.mentor.backend.service.*;
+import com.hcmus.mentor.backend.service.dto.GroupServiceDto;
 import com.hcmus.mentor.backend.service.fileupload.BlobStorage;
 import com.hcmus.mentor.backend.util.DateUtils;
 import com.hcmus.mentor.backend.util.FileUtils;
 import com.hcmus.mentor.backend.util.MailUtils;
 import io.minio.errors.*;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import org.apache.commons.math3.util.Pair;
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.LogManager;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.ss.util.CellRangeAddressList;
 import org.apache.poi.xssf.usermodel.XSSFDataValidationHelper;
 import org.apache.poi.xssf.usermodel.XSSFSheet;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.apache.tika.Tika;
+import org.apache.logging.log4j.Logger;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.*;
@@ -62,7 +66,8 @@ import static com.hcmus.mentor.backend.controller.payload.returnCode.InvalidPerm
 @Service
 @RequiredArgsConstructor
 public class GroupServiceImpl implements GroupService {
-    private final Integer SUCCESS = 200;
+    private static final Integer SUCCESS = 200;
+    private final Logger logger = LogManager.getLogger(this.getClass());
     private final GroupRepository groupRepository;
     private final GroupCategoryRepository groupCategoryRepository;
     private final UserRepository userRepository;
@@ -72,7 +77,6 @@ public class GroupServiceImpl implements GroupService {
     private final MongoTemplate mongoTemplate;
     private final MailUtils mailUtils;
     private final SystemConfigRepository systemConfigRepository;
-    private final String TEMPLATE_PATH = "src/main/resources/templates/import-groups.xlsx";
     private final MessageRepository messageRepository;
     private final MessageService messageService;
     private final SocketIOService socketIOService;
@@ -82,7 +86,7 @@ public class GroupServiceImpl implements GroupService {
 
     private static Date changeGroupTime(Date time, String type) {
         LocalDateTime timeInstant =
-                time.toInstant().atZone(ZoneOffset.systemDefault()).toLocalDateTime();
+                time.toInstant().atZone(ZoneId.systemDefault()).toLocalDateTime();
 
         if (type.equals("START")) {
             timeInstant = timeInstant.withHour(0).withMinute(0);
@@ -112,7 +116,7 @@ public class GroupServiceImpl implements GroupService {
         List<String> menteeIds = Collections.singletonList(userId);
         Slice<Group> wrapper =
                 groupRepository.findByMentorsInAndStatusOrMenteesInAndStatus(
-                        mentorIds, Group.Status.ACTIVE, menteeIds, Group.Status.ACTIVE, pageRequest);
+                        mentorIds, GroupStatus.ACTIVE, menteeIds, GroupStatus.ACTIVE, pageRequest);
         List<GroupHomepageResponse> groups = mappingGroupHomepageResponse(wrapper.getContent(), userId);
         return new PageImpl<>(groups, pageRequest, wrapper.getNumberOfElements());
     }
@@ -135,14 +139,14 @@ public class GroupServiceImpl implements GroupService {
                     return response;
                 })
                 .sorted(Comparator.comparing(GroupHomepageResponse::getUpdatedDate).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Group> getAllActiveOwnGroups(String userId) {
         List<String> mentorIds = Collections.singletonList(userId);
         List<String> menteeIds = Collections.singletonList(userId);
-        return groupRepository.findByMentorsInAndStatusOrMenteesInAndStatus(mentorIds, Group.Status.ACTIVE, menteeIds, Group.Status.ACTIVE);
+        return groupRepository.findByMentorsInAndStatusOrMenteesInAndStatus(mentorIds, GroupStatus.ACTIVE, menteeIds, GroupStatus.ACTIVE);
     }
 
     @Override
@@ -150,7 +154,7 @@ public class GroupServiceImpl implements GroupService {
         Pageable pageRequest = PageRequest.of(page, pageSize);
         List<String> mentorIds = Collections.singletonList(userId);
         Page<Group> wrapper =
-                groupRepository.findAllByMentorsInAndStatus(mentorIds, Group.Status.ACTIVE, pageRequest);
+                groupRepository.findAllByMentorsInAndStatus(mentorIds, GroupStatus.ACTIVE, pageRequest);
         List<GroupHomepageResponse> groups = mappingGroupHomepageResponse(wrapper.getContent(), userId);
         return new PageImpl<>(groups, pageRequest, wrapper.getNumberOfElements());
     }
@@ -160,7 +164,7 @@ public class GroupServiceImpl implements GroupService {
         Pageable pageRequest = PageRequest.of(page, pageSize);
         List<String> menteeIds = Collections.singletonList(userId);
         Page<Group> wrapper =
-                groupRepository.findAllByMenteesInAndStatus(menteeIds, Group.Status.ACTIVE, pageRequest);
+                groupRepository.findAllByMenteesInAndStatus(menteeIds, GroupStatus.ACTIVE, pageRequest);
         List<GroupHomepageResponse> groups = mappingGroupHomepageResponse(wrapper.getContent(), userId);
         return new PageImpl<>(groups, pageRequest, wrapper.getNumberOfElements());
     }
@@ -179,7 +183,7 @@ public class GroupServiceImpl implements GroupService {
         List<String> menteeIds = Collections.singletonList(userId);
         Pageable pageRequest = PageRequest.of(page, pageSize, Sort.by("updatedDate").descending());
         return groupRepository.findByMentorsInAndStatusOrMenteesInAndStatus(
-                mentorIds, Group.Status.ACTIVE, menteeIds, Group.Status.ACTIVE, pageRequest);
+                mentorIds, GroupStatus.ACTIVE, menteeIds, GroupStatus.ACTIVE, pageRequest);
     }
 
     private boolean hasDuplicateElements(List<String> list1, List<String> list2) {
@@ -197,7 +201,7 @@ public class GroupServiceImpl implements GroupService {
         return false;
     }
 
-    private GroupReturnService validateTimeRange(Date timeStart, Date timeEnd) {
+    private GroupServiceDto validateTimeRange(Date timeStart, Date timeEnd) {
         int maxYearsBetweenTimeStartAndTimeEnd =
                 Integer.parseInt(systemConfigRepository.findByKey("valid_max_year").getValue().toString());
         int maxYearsBetweenTimeStartAndNow = 4;
@@ -205,52 +209,52 @@ public class GroupServiceImpl implements GroupService {
         LocalDate localTimeEnd = timeEnd.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
         LocalDate localNow = new Date().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
         if (timeEnd.before(timeStart) || timeEnd.equals(timeStart)) {
-            return new GroupReturnService(
+            return new GroupServiceDto(
                     TIME_END_BEFORE_TIME_START, "Time end can't be before time start", null);
         }
         if (timeEnd.before(new Date()) || timeEnd.equals(new Date())) {
-            return new GroupReturnService(TIME_END_BEFORE_NOW, "Time end can't be before now", null);
+            return new GroupServiceDto(TIME_END_BEFORE_NOW, "Time end can't be before now", null);
         }
         if (ChronoUnit.YEARS.between(localTimeStart, localTimeEnd)
                 > maxYearsBetweenTimeStartAndTimeEnd) {
-            return new GroupReturnService(
+            return new GroupServiceDto(
                     TIME_END_TOO_FAR_FROM_TIME_START, "Time end is too far from time start", null);
         }
         if (Math.abs(ChronoUnit.YEARS.between(localTimeStart, localNow))
                 > maxYearsBetweenTimeStartAndNow) {
-            return new GroupReturnService(
+            return new GroupServiceDto(
                     TIME_START_TOO_FAR_FROM_NOW, "Time start is too far from now", null);
         }
-        return new GroupReturnService(SUCCESS, "", null);
+        return new GroupServiceDto(SUCCESS, "", null);
     }
 
-    private GroupReturnService validateTimeRangeForUpdate(Date timeStart, Date timeEnd) {
+    private GroupServiceDto validateTimeRangeForUpdate(Date timeStart, Date timeEnd) {
         int maxYearsBetweenTimeStartAndTimeEnd = 7;
         int maxYearsBetweenTimeStartAndNow = 4;
         LocalDate localTimeStart = timeStart.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
         LocalDate localTimeEnd = timeEnd.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
         LocalDate localNow = new Date().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
         if (timeEnd.before(timeStart) || timeEnd.equals(timeStart)) {
-            return new GroupReturnService(
+            return new GroupServiceDto(
                     TIME_END_BEFORE_TIME_START, "Time end can't be before time start", null);
         }
         if (ChronoUnit.YEARS.between(localTimeStart, localTimeEnd)
                 > maxYearsBetweenTimeStartAndTimeEnd) {
-            return new GroupReturnService(
+            return new GroupServiceDto(
                     TIME_END_TOO_FAR_FROM_TIME_START, "Time end is too far from time start", null);
         }
         if (Math.abs(ChronoUnit.YEARS.between(localTimeStart, localNow))
                 > maxYearsBetweenTimeStartAndNow) {
-            return new GroupReturnService(
+            return new GroupServiceDto(
                     TIME_START_TOO_FAR_FROM_NOW, "Time start is too far from now", null);
         }
-        return new GroupReturnService(SUCCESS, "", null);
+        return new GroupServiceDto(SUCCESS, "", null);
     }
 
     private List<String> validateInvalidMails(List<String> mentors, List<String> mentees) {
         return Stream.concat(mentors.stream(), mentees.stream())
                 .filter(email -> !MailUtils.isValidEmail(email))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> validateDuplicatedMails(List<String> mentors, List<String> mentees) {
@@ -272,73 +276,70 @@ public class GroupServiceImpl implements GroupService {
     private List<String> validateDomainMails(List<String> mentors, List<String> mentees) {
         return Stream.concat(mentors.stream(), mentees.stream())
                 .filter(email -> !mailUtils.isValidDomain(email))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private GroupReturnService validateListMentorsMentees(
+    private GroupServiceDto validateListMentorsMentees(
             List<String> mentors, List<String> mentees) {
         List<String> invalidEmails = validateInvalidMails(mentors, mentees);
         if (!invalidEmails.isEmpty()) {
-            return new GroupReturnService(INVALID_EMAILS, "Invalid emails", invalidEmails);
+            return new GroupServiceDto(INVALID_EMAILS, "Invalid emails", invalidEmails);
         }
         invalidEmails = validateDomainMails(mentors, mentees);
         if (!invalidEmails.isEmpty()) {
-            return new GroupReturnService(INVALID_DOMAINS, "Invalid domains", invalidEmails);
+            return new GroupServiceDto(INVALID_DOMAINS, "Invalid domains", invalidEmails);
         }
         invalidEmails = validateDuplicatedMails(mentors, mentees);
         if (!invalidEmails.isEmpty()) {
-            return new GroupReturnService(DUPLICATE_EMAIL, "Duplicate emails", invalidEmails);
+            return new GroupServiceDto(DUPLICATE_EMAIL, "Duplicate emails", invalidEmails);
         }
-        return new GroupReturnService(SUCCESS, "", null);
+        return new GroupServiceDto(SUCCESS, "", null);
     }
 
     @Override
-    public GroupReturnService createNewGroup(String emailUser, CreateGroupRequest request) {
+    public GroupServiceDto createNewGroup(String emailUser, CreateGroupRequest request) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         if (request.getName() == null
                 || request.getName().isEmpty()
                 || request.getTimeStart() == null
                 || request.getTimeEnd() == null) {
-            return new GroupReturnService(NOT_ENOUGH_FIELDS, "Not enough required fields", null);
+            return new GroupServiceDto(NOT_ENOUGH_FIELDS, "Not enough required fields", null);
         }
-        GroupReturnService isValidTimeRange =
-                validateTimeRange(request.getTimeStart(), request.getTimeEnd());
+        GroupServiceDto isValidTimeRange = validateTimeRange(request.getTimeStart(), request.getTimeEnd());
         if (isValidTimeRange.getReturnCode() != SUCCESS) {
             return isValidTimeRange;
         }
         if (groupRepository.existsByName(request.getName())) {
-            return new GroupReturnService(DUPLICATE_GROUP, "Group name has been duplicated", null);
+            return new GroupServiceDto(DUPLICATE_GROUP, "Group name has been duplicated", null);
         }
         if (!groupCategoryRepository.existsById(request.getGroupCategory())) {
-            return new GroupReturnService(GROUP_CATEGORY_NOT_FOUND, "Group category not exists", null);
+            return new GroupServiceDto(GROUP_CATEGORY_NOT_FOUND, "Group category not exists", null);
         }
 
         List<String> menteeEmails = request.getMenteeEmails();
         List<String> mentorEmails = request.getMentorEmails();
-        GroupReturnService isValidEmails = validateListMentorsMentees(mentorEmails, menteeEmails);
+        GroupServiceDto isValidEmails = validateListMentorsMentees(mentorEmails, menteeEmails);
         if (!isValidEmails.getReturnCode().equals(SUCCESS)) {
             return isValidEmails;
         }
 
-        List<String> menteeIds =
-                menteeEmails.stream()
-                        .filter(email -> !email.isEmpty())
-                        .map(email -> userService.importUser(email, request.getName()))
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
+        List<String> menteeIds = menteeEmails.stream()
+                .filter(email -> !email.isEmpty())
+                .map(email -> userService.importUser(email, request.getName()))
+                .filter(Objects::nonNull)
+                .toList();
 
-        List<String> mentorIds =
-                mentorEmails.stream()
-                        .filter(email -> !email.isEmpty())
-                        .map(email -> userService.importUser(email, request.getName()))
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
+        List<String> mentorIds = mentorEmails.stream()
+                .filter(email -> !email.isEmpty())
+                .map(email -> userService.importUser(email, request.getName()))
+                .filter(Objects::nonNull)
+                .toList();
         Date timeStart = changeGroupTime(request.getTimeStart(), "START");
         Date timeEnd = changeGroupTime(request.getTimeEnd(), "END");
         Duration duration = calculateDuration(timeStart, timeEnd);
-        Group.Status status = getStatusFromTimeStartAndTimeEnd(timeStart, timeEnd);
+        GroupStatus status = getStatusFromTimeStartAndTimeEnd(timeStart, timeEnd);
         Optional<User> userOptional = userRepository.findByEmail(emailUser);
         String creatorId = null;
         if (userOptional.isPresent()) {
@@ -358,36 +359,25 @@ public class GroupServiceImpl implements GroupService {
                         .creatorId(creatorId)
                         .build();
         groupRepository.save(group);
-        menteeEmails.stream().forEach(email -> mailService.sendInvitationMail(email, group));
-        mentorEmails.stream().forEach(email -> mailService.sendInvitationMail(email, group));
+        menteeEmails.stream().forEach(email -> mailService.sendInvitationToGroupMail(email, group));
+        mentorEmails.stream().forEach(email -> mailService.sendInvitationToGroupMail(email, group));
 
-        return new GroupReturnService(SUCCESS, null, group);
+        return new GroupServiceDto(SUCCESS, null, group);
     }
 
-    //    public Group addMentee(String groupId, AddMenteeRequest request) {
-    //        Optional<Group> groupWrapper = groupRepository.findById(groupId);
-    //        if (!groupWrapper.isPresent()) {
-    //            return null;
-    //        }
-    //        Group group = groupWrapper.get();
-    //        String email = request.getEmail();
-    //        String menteeId = userService.getOrCreateUserByEmail(email);
-    //        group.addMentee(menteeId);
-    //        return groupRepository.save(group);
-    //    }
     private Duration calculateDuration(Date from, Date to) {
         return Duration.between(from.toInstant(), to.toInstant());
     }
 
-    private Group.Status getStatusFromTimeStartAndTimeEnd(Date timeStart, Date timeEnd) {
+    private GroupStatus getStatusFromTimeStartAndTimeEnd(Date timeStart, Date timeEnd) {
         Date now = new Date();
         if (timeStart.before(now) && timeEnd.before(now)) {
-            return Group.Status.OUTDATED;
+            return GroupStatus.OUTDATED;
         }
         if (timeStart.before(now) && timeEnd.after(now)) {
-            return Group.Status.ACTIVE;
+            return GroupStatus.ACTIVE;
         }
-        return Group.Status.INACTIVE;
+        return GroupStatus.INACTIVE;
     }
 
     private void removeBlankRows(Sheet sheet) {
@@ -402,7 +392,7 @@ public class GroupServiceImpl implements GroupService {
         }
     }
 
-    private Boolean isValidTemplate(Workbook workbook) {
+    private boolean isValidTemplate(Workbook workbook) {
         int numberOfSheetInTemplate = 2;
         if (workbook.getNumberOfSheets() != numberOfSheetInTemplate) {
             return false;
@@ -416,7 +406,7 @@ public class GroupServiceImpl implements GroupService {
         return isValidHeader(row);
     }
 
-    private Boolean isValidHeader(Row row) {
+    private boolean isValidHeader(Row row) {
         return (row.getCell(0).getStringCellValue().equals("STT")
                 && row.getCell(1).getStringCellValue().equals("Loại nhóm *")
                 && row.getCell(2).getStringCellValue().equals("Emails người được quản lí *")
@@ -428,7 +418,7 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService readGroups(Workbook workbook) throws ParseException {
+    public GroupServiceDto readGroups(Workbook workbook) throws ParseException {
         Map<String, Group> groups = new HashMap<>();
         Sheet sheet = workbook.getSheet("Data");
         removeBlankRows(sheet);
@@ -452,16 +442,14 @@ public class GroupServiceImpl implements GroupService {
                 menteeEmails.add(menteeEmail);
                 groupName = row.getCell(3).getStringCellValue();
                 description = row.getCell(4).getStringCellValue();
-                mentorEmails =
-                        Arrays.stream(row.getCell(5).getStringCellValue().split("\n"))
-                                .collect(Collectors.toList());
+                mentorEmails = Arrays.stream(row.getCell(5).getStringCellValue().split("\n")).toList();
                 DateFormat formatter = new SimpleDateFormat("dd/MM/yyyy");
                 formatter.setTimeZone(TimeZone.getTimeZone("UTC"));
                 timeStart = formatter.parse(row.getCell(6).getStringCellValue());
                 timeEnd = formatter.parse(row.getCell(7).getStringCellValue());
             }
 
-            Boolean isAddMentee = false;
+            boolean isAddMentee = false;
             while (i <= sheet.getLastRowNum() && row.getCell(3).getStringCellValue().isEmpty()) {
                 isAddMentee = true;
                 menteeEmail = row.getCell(2).getStringCellValue();
@@ -469,50 +457,47 @@ public class GroupServiceImpl implements GroupService {
                 row = sheet.getRow(++i);
             }
             if (isAddMentee) {
-                GroupReturnService isValidTimeRange = validateTimeRange(timeStart, timeEnd);
+                GroupServiceDto isValidTimeRange = validateTimeRange(timeStart, timeEnd);
                 if (isValidTimeRange.getReturnCode() != SUCCESS) {
                     return isValidTimeRange;
                 }
                 if (!groupCategoryRepository.existsByName(groupCategoryName)) {
-                    return new GroupReturnService(
-                            GROUP_CATEGORY_NOT_FOUND, "Group category not exists", groupCategoryName);
+                    return new GroupServiceDto(GROUP_CATEGORY_NOT_FOUND, "Group category not exists", groupCategoryName);
                 }
                 String groupCategoryId = groupCategoryRepository.findByName(groupCategoryName).getId();
                 if (!groups.containsKey(groupName) && !groupRepository.existsByName(groupName)) {
-                    Group group =
-                            Group.builder()
-                                    .name(groupName)
-                                    .description(description)
-                                    .createdDate(new Date())
-                                    .mentees(menteeEmails)
-                                    .mentors(mentorEmails)
-                                    .groupCategory(groupCategoryId)
-                                    .timeStart(timeStart)
-                                    .timeEnd(timeEnd)
-                                    .build();
+                    Group group = Group.builder()
+                            .name(groupName)
+                            .description(description)
+                            .createdDate(new Date())
+                            .mentees(menteeEmails)
+                            .mentors(mentorEmails)
+                            .groupCategory(groupCategoryId)
+                            .timeStart(timeStart)
+                            .timeEnd(timeEnd)
+                            .build();
                     groups.put(groupName, group);
                 } else {
-                    return new GroupReturnService(
-                            DUPLICATE_GROUP, "Group name has been duplicated", groupName);
+                    return new GroupServiceDto(DUPLICATE_GROUP, "Group name has been duplicated", groupName);
                 }
                 i--;
             }
         }
-        return new GroupReturnService(SUCCESS, "", groups);
+        return new GroupServiceDto(SUCCESS, "", groups);
     }
 
     @Override
-    public GroupReturnService importGroups(String emailUser, MultipartFile file) throws IOException {
+    public GroupServiceDto importGroups(String emailUser, MultipartFile file) throws IOException {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Map<String, Group> groups;
         try (InputStream data = file.getInputStream();
              Workbook workbook = new XSSFWorkbook(data)) {
             if (!isValidTemplate(workbook)) {
-                return new GroupReturnService(INVALID_TEMPLATE, "Invalid template", null);
+                return new GroupServiceDto(INVALID_TEMPLATE, "Invalid template", null);
             }
-            GroupReturnService validReadGroups = readGroups(workbook);
+            GroupServiceDto validReadGroups = readGroups(workbook);
             if (validReadGroups.getReturnCode() != SUCCESS) {
                 return validReadGroups;
             }
@@ -521,7 +506,7 @@ public class GroupServiceImpl implements GroupService {
             throw new RuntimeException(e);
         }
         for (Group group : groups.values()) {
-            GroupReturnService isValidMails =
+            GroupServiceDto isValidMails =
                     validateListMentorsMentees(group.getMentors(), group.getMentees());
             if (isValidMails.getReturnCode() != SUCCESS) {
                 return isValidMails;
@@ -530,20 +515,18 @@ public class GroupServiceImpl implements GroupService {
 
         List<CreateGroupRequest> createGroupRequests =
                 groups.values().stream()
-                        .map(
-                                group ->
-                                        CreateGroupRequest.builder()
-                                                .name(group.getName())
-                                                .createdDate(new Date())
-                                                .menteeEmails(group.getMentees())
-                                                .mentorEmails(group.getMentors())
-                                                .groupCategory(group.getGroupCategory())
-                                                .timeStart(group.getTimeStart())
-                                                .timeEnd(group.getTimeEnd())
-                                                .build())
-                        .collect(Collectors.toList());
+                        .map(group -> CreateGroupRequest.builder()
+                                .name(group.getName())
+                                .createdDate(new Date())
+                                .menteeEmails(group.getMentees())
+                                .mentorEmails(group.getMentors())
+                                .groupCategory(group.getGroupCategory())
+                                .timeStart(group.getTimeStart())
+                                .timeEnd(group.getTimeEnd())
+                                .build())
+                        .toList();
         for (CreateGroupRequest createGroupRequest : createGroupRequests) {
-            GroupReturnService returnData = createNewGroup(emailUser, createGroupRequest);
+            GroupServiceDto returnData = createNewGroup(emailUser, createGroupRequest);
             if (returnData.getReturnCode() != SUCCESS) {
                 return returnData;
             }
@@ -555,18 +538,18 @@ public class GroupServiceImpl implements GroupService {
             group.setMentees(groupRepository.findByName(group.getName()).getMentees());
         }
 
-        return new GroupReturnService(SUCCESS, null, groups.values());
+        return new GroupServiceDto(SUCCESS, null, groups.values());
     }
 
     @Override
     public List<Group> validateTimeGroups(List<Group> groups) {
         for (Group group : groups) {
-            if (group.getStatus() != Group.Status.DELETED && group.getStatus() != Group.Status.DISABLED) {
+            if (group.getStatus() != GroupStatus.DELETED && group.getStatus() != GroupStatus.DISABLED) {
                 if (group.getTimeEnd().before(new Date())) {
-                    group.setStatus(Group.Status.OUTDATED);
+                    group.setStatus(GroupStatus.OUTDATED);
                 }
                 if (group.getTimeStart().after(new Date())) {
-                    group.setStatus(Group.Status.INACTIVE);
+                    group.setStatus(GroupStatus.INACTIVE);
                 }
             }
             groupRepository.save(group);
@@ -575,7 +558,7 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService findGroups(
+    public GroupServiceDto findGroups(
             String emailUser,
             String name,
             String mentorEmail,
@@ -589,7 +572,7 @@ public class GroupServiceImpl implements GroupService {
             int page,
             int pageSize) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Pair<Long, List<Group>> groups =
                 getGroupsByConditions(
@@ -605,7 +588,7 @@ public class GroupServiceImpl implements GroupService {
                         status,
                         page,
                         pageSize);
-        return new GroupReturnService(
+        return new GroupServiceDto(
                 SUCCESS,
                 "",
                 new PageImpl<>(groups.getValue(), PageRequest.of(page, pageSize), groups.getKey()));
@@ -681,14 +664,14 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService addMentees(
+    public GroupServiceDto addMentees(
             String emailUser, String groupId, AddMenteesRequest request) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
         List<String> emails = request.getEmails();
@@ -696,11 +679,11 @@ public class GroupServiceImpl implements GroupService {
                 emails.stream()
                         .filter(email -> !email.isEmpty())
                         .map(email -> userService.getOrCreateUserByEmail(email, group.getName()))
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (hasDuplicateElements(ids, group.getMentees())
                 || hasDuplicateElements(ids, group.getMentors())) {
-            return new GroupReturnService(DUPLICATE_EMAIL, "Duplicate emails", null);
+            return new GroupServiceDto(DUPLICATE_EMAIL, "Duplicate emails", null);
         }
         group.getMentees().addAll(ids);
         List<String> listMenteesAfterRemoveDuplicate =
@@ -708,21 +691,21 @@ public class GroupServiceImpl implements GroupService {
         group.setMentees(listMenteesAfterRemoveDuplicate);
         groupRepository.save(group);
         for (String emailAddress : emails) {
-            mailService.sendInvitationMail(emailAddress, group);
+            mailService.sendInvitationToGroupMail(emailAddress, group);
         }
 
-        return new GroupReturnService(SUCCESS, null, group);
+        return new GroupServiceDto(SUCCESS, null, group);
     }
 
     @Override
-    public GroupReturnService addMentors(
+    public GroupServiceDto addMentors(
             String emailUser, String groupId, AddMentorsRequest request) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
 
@@ -731,11 +714,11 @@ public class GroupServiceImpl implements GroupService {
                 emails.stream()
                         .filter(email -> !email.isEmpty())
                         .map(email -> userService.getOrCreateUserByEmail(email, group.getName()))
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (hasDuplicateElements(ids, group.getMentees())
                 || hasDuplicateElements(ids, group.getMentors())) {
-            return new GroupReturnService(DUPLICATE_EMAIL, "Duplicate emails", null);
+            return new GroupServiceDto(DUPLICATE_EMAIL, "Duplicate emails", null);
         }
 
         group.getMentors().addAll(ids);
@@ -745,109 +728,98 @@ public class GroupServiceImpl implements GroupService {
 
         groupRepository.save(group);
         for (String emailAddress : emails) {
-            mailService.sendInvitationMail(emailAddress, group);
+            mailService.sendInvitationToGroupMail(emailAddress, group);
         }
 
-        return new GroupReturnService(SUCCESS, null, group);
+        return new GroupServiceDto(SUCCESS, null, group);
     }
 
     @Override
-    public GroupReturnService deleteMentee(String emailUser, String groupId, String menteeId) {
+    public GroupServiceDto deleteMentee(String emailUser, String groupId, String menteeId) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
 
         if (group.getMentees().remove(menteeId)) {
             group.setMentees(group.getMentees());
             groupRepository.save(group);
-            return new GroupReturnService(SUCCESS, null, group);
+            return new GroupServiceDto(SUCCESS, null, group);
         }
-        return new GroupReturnService(MENTEE_NOT_FOUND, "Mentee not found", null);
+        return new GroupServiceDto(MENTEE_NOT_FOUND, "Mentee not found", null);
     }
 
     @Override
-    public GroupReturnService deleteMentor(String emailUser, String groupId, String mentorId) {
+    public GroupServiceDto deleteMentor(String emailUser, String groupId, String mentorId) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
 
         if (group.getMentors().remove(mentorId)) {
             group.setMentors(group.getMentors());
             groupRepository.save(group);
-            return new GroupReturnService(SUCCESS, null, group);
+            return new GroupServiceDto(SUCCESS, null, group);
         }
 
-        return new GroupReturnService(MENTOR_NOT_FOUND, "mentor not found", null);
+        return new GroupServiceDto(MENTOR_NOT_FOUND, "mentor not found", null);
     }
 
     @Override
-    public GroupReturnService promoteToMentor(String emailUser, String groupId, String menteeId) {
+    public GroupServiceDto promoteToMentor(String emailUser, String groupId, String menteeId) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
 
         if (group.getMentees().remove(menteeId)) {
             group.getMentors().add(menteeId);
             groupRepository.save(group);
-            return new GroupReturnService(SUCCESS, null, group);
+            return new GroupServiceDto(SUCCESS, null, group);
         }
-        return new GroupReturnService(MENTEE_NOT_FOUND, "Mentee not found", null);
+        return new GroupServiceDto(MENTEE_NOT_FOUND, "Mentee not found", null);
     }
 
     @Override
-    public GroupReturnService demoteToMentee(String emailUser, String groupId, String mentorId) {
+    public GroupServiceDto demoteToMentee(String emailUser, String groupId, String mentorId) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
 
         if (group.getMentors().remove(mentorId)) {
             group.getMentees().add(mentorId);
             groupRepository.save(group);
-            return new GroupReturnService(SUCCESS, null, group);
+            return new GroupServiceDto(SUCCESS, null, group);
         }
-        return new GroupReturnService(MENTOR_NOT_FOUND, "Mentor not found", null);
-    }
-
-    private void clearValidation(Sheet sheet) {
-        for (Row row : sheet) {
-            for (Cell cell : row) {
-                cell.removeCellComment();
-                cell.removeHyperlink();
-                cell.removeFormula();
-                cell.setCellType(CellType.BLANK);
-            }
-        }
+        return new GroupServiceDto(MENTOR_NOT_FOUND, "Mentor not found", null);
     }
 
     @Override
     public void loadTemplate(File file) throws Exception {
         int lastRow = 10000;
         List<GroupCategory> groupCategories =
-                groupCategoryRepository.findAllByStatus(GroupCategory.Status.ACTIVE);
+                groupCategoryRepository.findAllByStatus(GroupCategoryStatus.ACTIVE);
         String[] groupCategoryNames =
                 groupCategories.stream()
-                        .map(groupCategory -> groupCategory.getName())
-                        .collect(Collectors.toList())
+                        .map(GroupCategory::getName)
+                        .toList()
                         .toArray(new String[0]);
         FileInputStream inputStream = new FileInputStream(file);
         Workbook workbook = WorkbookFactory.create(inputStream);
@@ -866,22 +838,6 @@ public class GroupServiceImpl implements GroupService {
         dataValidationCategory.setEmptyCellAllowed(false);
         dataSheet.addValidationData(dataValidationCategory);
 
-        //        XSSFDataValidationConstraint validationConstraintDate =
-        // (XSSFDataValidationConstraint)dvHelper.createDateConstraint(
-        //                DataValidationConstraint.OperatorType.BETWEEN,
-        //                "01/01/1970",
-        //                "31/12/2200",
-        //                "dd/mm/yyyy"
-        //        );
-        //        CellRangeAddressList addressListDate = new CellRangeAddressList(1, lastRow, 4, 5);
-        //        DataValidation dataValidationDate = dvHelper.createValidation(
-        //                validationConstraintDate, addressListDate);
-        //
-        //        dataValidationDate.setShowErrorBox(true);
-        //        dataValidationDate.setSuppressDropDownArrow(true);
-        //        dataValidationDate.setEmptyCellAllowed(false);
-
-        //        groupsSheet.addValidationData(dataValidationDate);
         FileOutputStream outputStream = new FileOutputStream(file);
         workbook.write(outputStream);
         workbook.close();
@@ -890,20 +846,20 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService updateGroup(
+    public GroupServiceDto updateGroup(
             String emailUser, String groupId, UpdateGroupRequest request) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
 
         if (groupRepository.existsByName(request.getName())
                 && !request.getName().equals(group.getName())) {
-            return new GroupReturnService(DUPLICATE_GROUP, "Group name has been duplicated", null);
+            return new GroupServiceDto(DUPLICATE_GROUP, "Group name has been duplicated", null);
         }
         Date timeStart = changeGroupTime(request.getTimeStart(), "START");
         Date timeEnd = changeGroupTime(request.getTimeEnd(), "END");
@@ -915,40 +871,40 @@ public class GroupServiceImpl implements GroupService {
                 timeEnd,
                 request.getGroupCategory());
         if (!groupCategoryRepository.existsById(group.getGroupCategory())) {
-            return new GroupReturnService(GROUP_CATEGORY_NOT_FOUND, "Group category not exists", null);
+            return new GroupServiceDto(GROUP_CATEGORY_NOT_FOUND, "Group category not exists", null);
         }
 
-        GroupReturnService isValidTimeRange =
+        GroupServiceDto isValidTimeRange =
                 validateTimeRangeForUpdate(group.getTimeStart(), group.getTimeEnd());
         if (isValidTimeRange.getReturnCode() != SUCCESS) {
             return isValidTimeRange;
         }
         Duration duration = calculateDuration(group.getTimeStart(), group.getTimeEnd());
         group.setDuration(duration);
-        Group.Status status =
+        GroupStatus status =
                 getStatusFromTimeStartAndTimeEnd(group.getTimeStart(), group.getTimeEnd());
         group.setStatus(status);
-        if (request.getStatus().equals(Group.Status.DISABLED)) {
-            group.setStatus(Group.Status.DISABLED);
+        if (request.getStatus().equals(GroupStatus.DISABLED)) {
+            group.setStatus(GroupStatus.DISABLED);
         }
         group.setUpdatedDate(new Date());
         groupRepository.save(group);
-        return new GroupReturnService(SUCCESS, null, group);
+        return new GroupServiceDto(SUCCESS, null, group);
     }
 
     @Override
-    public GroupReturnService deleteGroup(String emailUser, String groupId) {
+    public GroupServiceDto deleteGroup(String emailUser, String groupId) {
         if (!permissionService.hasPermissionOnGroup(emailUser, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
-        group.setStatus(Group.Status.DELETED);
+        group.setStatus(GroupStatus.DELETED);
         groupRepository.save(group);
-        return new GroupReturnService(SUCCESS, null, group);
+        return new GroupServiceDto(SUCCESS, null, group);
     }
 
     @Override
@@ -989,9 +945,9 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService deleteMultiple(String emailUser, List<String> ids) {
+    public GroupServiceDto deleteMultiple(String emailUser, List<String> ids) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         List<String> notFoundIds = new ArrayList<>();
         for (String id : ids) {
@@ -1002,18 +958,18 @@ public class GroupServiceImpl implements GroupService {
         }
 
         if (!notFoundIds.isEmpty()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", notFoundIds);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", notFoundIds);
         }
         List<Group> groups = groupRepository.findByIdIn(ids);
-        groups.forEach(group -> group.setStatus(Group.Status.DELETED));
+        groups.forEach(group -> group.setStatus(GroupStatus.DELETED));
         groupRepository.saveAll(groups);
-        return new GroupReturnService(SUCCESS, null, groups);
+        return new GroupServiceDto(SUCCESS, null, groups);
     }
 
     @Override
-    public GroupReturnService disableMultiple(String emailUser, List<String> ids) {
+    public GroupServiceDto disableMultiple(String emailUser, List<String> ids) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         List<String> notFoundIds = new ArrayList<>();
         for (String id : ids) {
@@ -1024,21 +980,21 @@ public class GroupServiceImpl implements GroupService {
         }
 
         if (!notFoundIds.isEmpty()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", notFoundIds);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", notFoundIds);
         }
         List<Group> groups = groupRepository.findByIdIn(ids);
         for (Group group : groups) {
-            group.setStatus(Group.Status.DISABLED);
+            group.setStatus(GroupStatus.DISABLED);
             groupRepository.save(group);
         }
 
-        return new GroupReturnService(SUCCESS, null, groups);
+        return new GroupServiceDto(SUCCESS, null, groups);
     }
 
     @Override
-    public GroupReturnService enableMultiple(String emailUser, List<String> ids) {
+    public GroupServiceDto enableMultiple(String emailUser, List<String> ids) {
         if (!permissionService.isAdmin(emailUser)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
         List<String> notFoundIds = new ArrayList<>();
         for (String id : ids) {
@@ -1049,21 +1005,21 @@ public class GroupServiceImpl implements GroupService {
         }
 
         if (!notFoundIds.isEmpty()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", notFoundIds);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", notFoundIds);
         }
         List<Group> groups = groupRepository.findByIdIn(ids);
         for (Group group : groups) {
-            Group.Status status =
+            GroupStatus status =
                     getStatusFromTimeStartAndTimeEnd(group.getTimeStart(), group.getTimeEnd());
             group.setStatus(status);
             groupRepository.save(group);
         }
 
-        return new GroupReturnService(SUCCESS, null, groups);
+        return new GroupServiceDto(SUCCESS, null, groups);
     }
 
     @Override
-    public GroupReturnService getGroupMembers(String groupId, String userId) {
+    public GroupServiceDto getGroupMembers(String groupId, String userId) {
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         List<String> mentorIds = new ArrayList<>();
         List<String> menteeIds = new ArrayList<>();
@@ -1071,24 +1027,22 @@ public class GroupServiceImpl implements GroupService {
         if (!groupWrapper.isPresent()) {
             Optional<Channel> channelWrapper = channelRepository.findById(groupId);
             if (!channelWrapper.isPresent()) {
-                return new GroupReturnService(NOT_FOUND, "Group not found", null);
+                return new GroupServiceDto(NOT_FOUND, "Group not found", null);
             }
 
             Channel channel = channelWrapper.get();
             group = groupRepository.findById(channel.getParentId()).orElse(null);
             if (group == null) {
-                return new GroupReturnService(NOT_FOUND, "Group not found", null);
+                return new GroupServiceDto(NOT_FOUND, "Group not found", null);
             }
 
-            mentorIds =
-                    channel.getUserIds().stream().filter(group::isMentor).collect(Collectors.toList());
-            menteeIds =
-                    channel.getUserIds().stream().filter(group::isMentee).collect(Collectors.toList());
+            mentorIds = channel.getUserIds().stream().filter(group::isMentor).toList();
+            menteeIds = channel.getUserIds().stream().filter(group::isMentee).toList();
         }
 
         if (groupWrapper.isPresent()) {
             if (!permissionService.isUserIdInGroup(userId, groupId)) {
-                return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+                return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
             }
 
             group = groupWrapper.get();
@@ -1096,24 +1050,17 @@ public class GroupServiceImpl implements GroupService {
             menteeIds = group.getMentees();
         }
 
-        List<GroupMembersResponse.GroupMember> mentors =
-                userRepository.findAllByIdIn(mentorIds).stream()
-                        .map(ProfileResponse::normalize)
-                        .map(profile -> GroupMembersResponse.GroupMember.from(profile, "MENTOR"))
-                        .collect(Collectors.toList());
-        List<String> markedMentees =
-                group.getMarkedMenteeIds() != null ? group.getMarkedMenteeIds() : new ArrayList<>();
-        List<GroupMembersResponse.GroupMember> mentees =
-                userRepository.findAllByIdIn(menteeIds).stream()
-                        .map(ProfileResponse::normalize)
-                        .map(
-                                profile ->
-                                        GroupMembersResponse.GroupMember.from(
-                                                profile, "MENTEE", markedMentees.contains(profile.getId())))
-                        .collect(Collectors.toList());
-        GroupMembersResponse response =
-                GroupMembersResponse.builder().mentors(mentors).mentees(mentees).build();
-        return new GroupReturnService(SUCCESS, null, response);
+        List<GroupMembersResponse.GroupMember> mentors = userRepository.findAllByIdIn(mentorIds).stream()
+                .map(ProfileResponse::normalize)
+                .map(profile -> GroupMembersResponse.GroupMember.from(profile, "MENTOR"))
+                .toList();
+        List<String> markedMentees = group.getMarkedMenteeIds() != null ? group.getMarkedMenteeIds() : new ArrayList<>();
+        List<GroupMembersResponse.GroupMember> mentees = userRepository.findAllByIdIn(menteeIds).stream()
+                .map(ProfileResponse::normalize)
+                .map(profile -> GroupMembersResponse.GroupMember.from(profile, "MENTEE", markedMentees.contains(profile.getId())))
+                .toList();
+        GroupMembersResponse response = GroupMembersResponse.builder().mentors(mentors).mentees(mentees).build();
+        return new GroupServiceDto(SUCCESS, null, response);
     }
 
     @Override
@@ -1139,41 +1086,41 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService getGroupDetail(String userId, String groupId) {
+    public GroupServiceDto getGroupDetail(String userId, String groupId) {
         List<GroupDetailResponse> groupWrapper = groupRepository.getGroupDetail(groupId);
-        if (groupWrapper.size() == 0) {
+        if (groupWrapper.isEmpty()) {
             Optional<Channel> channelWrapper = channelRepository.findById(groupId);
-            if (!channelWrapper.isPresent()) {
-                return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            if (channelWrapper.isEmpty()) {
+                return new GroupServiceDto(NOT_FOUND, "Group not found", null);
             }
             Channel channel = channelWrapper.get();
             Optional<Group> parentGroupWrapper = groupRepository.findById(channel.getParentId());
-            if (!parentGroupWrapper.isPresent()) {
-                return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            if (parentGroupWrapper.isEmpty()) {
+                return new GroupServiceDto(NOT_FOUND, "Group not found", null);
             }
 
             Group parentGroup = parentGroupWrapper.get();
             if (!parentGroup.isMentor(userId) && !channel.isMember(userId)) {
-                return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+                return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
             }
             GroupDetailResponse channelDetail = fulfillChannelDetail(userId, channel, parentGroup);
             if (channelDetail == null) {
-                return new GroupReturnService(NOT_FOUND, "Group not found", null);
+                return new GroupServiceDto(NOT_FOUND, "Group not found", null);
             }
             GroupDetailResponse response = fulfillGroupDetail(userId, channelDetail);
             response.setPermissions(
-                    response.getPermissions().contains(GroupCategory.Permission.SEND_FILES)
-                            ? Collections.singletonList(GroupCategory.Permission.SEND_FILES)
+                    response.getPermissions().contains(GroupCategoryPermission.SEND_FILES)
+                            ? Collections.singletonList(GroupCategoryPermission.SEND_FILES)
                             : Collections.emptyList());
-            return new GroupReturnService(SUCCESS, null, response);
+            return new GroupServiceDto(SUCCESS, null, response);
         }
 
         if (!permissionService.isUserIdInGroup(userId, groupId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
 
         GroupDetailResponse response = fulfillGroupDetail(userId, groupWrapper.get(0));
-        return new GroupReturnService(SUCCESS, null, response);
+        return new GroupServiceDto(SUCCESS, null, response);
     }
 
     private GroupDetailResponse fulfillChannelDetail(
@@ -1183,7 +1130,7 @@ public class GroupServiceImpl implements GroupService {
         String channelName = channel.getName();
         String imageUrl = null;
 
-        if (Channel.Type.PRIVATE_MESSAGE.equals(channel.getType())) {
+        if (ChannelType.PRIVATE_MESSAGE.equals(channel.getType())) {
             String penpalId = channel.getUserIds().stream()
                     .filter(id -> !id.equals(userId))
                     .findFirst()
@@ -1222,7 +1169,7 @@ public class GroupServiceImpl implements GroupService {
 
         List<MessageResponse> messages = new ArrayList<>();
 
-        if (response.getPinnedMessageIds() != null && response.getPinnedMessageIds().size() != 0) {
+        if (response.getPinnedMessageIds() != null && !response.getPinnedMessageIds().isEmpty()) {
             messages = response.getPinnedMessageIds().stream()
                     .map(messageRepository::findById)
                     .filter(Optional::isPresent)
@@ -1232,7 +1179,7 @@ public class GroupServiceImpl implements GroupService {
                         User user = userRepository.findById(message.getSenderId()).orElse(null);
                         return MessageResponse.from(message, ProfileResponse.from(user));
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         response.setPinnedMessages(messageService.fulfillMessages(messages, userId));
         response.setTotalMember(channel.getUserIds().size());
@@ -1253,7 +1200,7 @@ public class GroupServiceImpl implements GroupService {
         }
 
         List<MessageResponse> messages = new ArrayList<>();
-        if (response.getPinnedMessageIds() != null && response.getPinnedMessageIds().size() != 0) {
+        if (response.getPinnedMessageIds() != null && !response.getPinnedMessageIds().isEmpty()) {
             messages = response.getPinnedMessageIds().stream()
                     .map(messageRepository::findById)
                     .filter(Optional::isPresent)
@@ -1263,13 +1210,12 @@ public class GroupServiceImpl implements GroupService {
                         User user = userRepository.findById(message.getSenderId()).orElse(null);
                         return MessageResponse.from(message, ProfileResponse.from(user));
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         response.setPinnedMessages(messageService.fulfillMessages(messages, userId));
-        response.setImageUrl(
-                (response.getImageUrl() == null)
-                        ? groupCategory != null ? groupCategory.getIconUrl() : null
-                        : response.getImageUrl());
+        response.setImageUrl((response.getImageUrl() == null)
+                ? groupCategory != null ? groupCategory.getIconUrl() : null
+                : response.getImageUrl());
         return response;
     }
 
@@ -1283,7 +1229,7 @@ public class GroupServiceImpl implements GroupService {
         return group.getMentees().stream()
                 .filter(userRepository::existsById)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -1304,19 +1250,19 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupReturnService getGroupMedia(String userId, String groupId) {
+    public GroupServiceDto getGroupMedia(String userId, String groupId) {
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         List<String> senderIds = new ArrayList<>();
         if (!groupWrapper.isPresent()) {
             Optional<Channel> channelWrapper = channelRepository.findById(groupId);
             if (!channelWrapper.isPresent()) {
-                return new GroupReturnService(NOT_FOUND, "Group not found", null);
+                return new GroupServiceDto(NOT_FOUND, "Group not found", null);
             }
 
             Channel channel = channelWrapper.get();
             if (!channel.isMember(userId)
                     && !permissionService.isUserIdInGroup(userId, channel.getParentId())) {
-                return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+                return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
             }
 
             senderIds = channel.getUserIds();
@@ -1325,81 +1271,73 @@ public class GroupServiceImpl implements GroupService {
         if (groupWrapper.isPresent()) {
             Group group = groupWrapper.get();
             if (!group.isMember(userId)) {
-                return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+                return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
             }
 
-            senderIds =
-                    Stream.concat(group.getMentees().stream(), group.getMentors().stream())
-                            .collect(Collectors.toList());
+            senderIds = Stream.concat(group.getMentees().stream(), group.getMentors().stream())
+                    .toList();
         }
 
-        Map<String, ProfileResponse> senders =
-                userRepository.findAllByIdIn(senderIds).stream()
-                        .collect(
-                                Collectors.toMap(
-                                        ProfileResponse::getId, sender -> sender, (sender1, sender2) -> sender2));
+        Map<String, ProfileResponse> senders = userRepository.findAllByIdIn(senderIds).stream()
+                .collect(
+                        Collectors.toMap(
+                                ProfileResponse::getId, sender -> sender, (sender1, sender2) -> sender2));
 
-        List<Message> mediaMessages =
-                messageRepository.findByGroupIdAndTypeInAndStatusInOrderByCreatedDateDesc(
-                        groupId,
-                        Arrays.asList(Message.Type.IMAGE, Message.Type.FILE),
-                        Arrays.asList(Message.Status.SENT, Message.Status.EDITED));
+        List<Message> mediaMessages = messageRepository.findByGroupIdAndTypeInAndStatusInOrderByCreatedDateDesc(
+                groupId,
+                Arrays.asList(Message.Type.IMAGE, Message.Type.FILE),
+                Arrays.asList(Message.Status.SENT, Message.Status.EDITED));
 
         List<ShortMediaMessage> media = new ArrayList<>();
-        mediaMessages.forEach(
-                message -> {
-                    ProfileResponse sender = senders.getOrDefault(message.getSenderId(), null);
+        mediaMessages.forEach(message -> {
+            ProfileResponse sender = senders.getOrDefault(message.getSenderId(), null);
 
-                    if (Message.Type.IMAGE.equals(message.getType())) {
-                        List<ShortMediaMessage> images =
-                                message.getImages().stream()
-                                        .map(
-                                                url ->
-                                                        ShortMediaMessage.builder()
-                                                                .id(message.getId())
-                                                                .sender(sender)
-                                                                .imageUrl(url)
-                                                                .type(message.getType())
-                                                                .createdDate(message.getCreatedDate())
-                                                                .build())
-                                        .collect(Collectors.toList());
-                        media.addAll(images);
-                    }
+            if (Message.Type.IMAGE.equals(message.getType())) {
+                List<ShortMediaMessage> images = message.getImages().stream()
+                        .map(url -> ShortMediaMessage.builder()
+                                .id(message.getId())
+                                .sender(sender)
+                                .imageUrl(url)
+                                .type(message.getType())
+                                .createdDate(message.getCreatedDate())
+                                .build())
+                        .toList();
+                media.addAll(images);
+            }
 
-                    if (Message.Type.FILE.equals(message.getType())) {
-                        ShortMediaMessage file =
-                                ShortMediaMessage.builder()
-                                        .id(message.getId())
-                                        .sender(sender)
-                                        .file(message.getFile())
-                                        .type(message.getType())
-                                        .createdDate(message.getCreatedDate())
-                                        .build();
-                        media.add(file);
-                    }
-                });
-        return new GroupReturnService(SUCCESS, null, media);
+            if (Message.Type.FILE.equals(message.getType())) {
+                ShortMediaMessage file =
+                        ShortMediaMessage.builder()
+                                .id(message.getId())
+                                .sender(sender)
+                                .file(message.getFile())
+                                .type(message.getType())
+                                .createdDate(message.getCreatedDate())
+                                .build();
+                media.add(file);
+            }
+        });
+        return new GroupServiceDto(SUCCESS, null, media);
     }
 
     @Override
-    public GroupReturnService updateAvatar(String userId, String groupId, MultipartFile file)
+    public GroupServiceDto updateAvatar(String userId, String groupId, MultipartFile file)
             throws GeneralSecurityException, IOException, ServerException, InsufficientDataException, ErrorResponseException, InvalidResponseException, XmlParserException, InternalException {
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         if (!groupWrapper.isPresent()) {
-            return new GroupReturnService(NOT_FOUND, "Group not found", null);
+            return new GroupServiceDto(NOT_FOUND, "Group not found", null);
         }
         Group group = groupWrapper.get();
         if (!group.isMember(userId)) {
-            return new GroupReturnService(INVALID_PERMISSION, "Invalid permission", null);
+            return new GroupServiceDto(INVALID_PERMISSION, "Invalid permission", null);
         }
 
         String key = blobStorage.generateBlobKey(new Tika().detect(file.getBytes()));
         blobStorage.post(file, key);
 
-        // #TODO: Current save the link of google drive
         group.setImageUrl(key);
         groupRepository.save(group);
-        return new GroupReturnService(SUCCESS, "", key);
+        return new GroupServiceDto(SUCCESS, "", key);
     }
 
     private List<Group> getGroupsForAdmin(String emailUser) {
@@ -1412,13 +1350,13 @@ public class GroupServiceImpl implements GroupService {
             groups = groupRepository.findAllByCreatorIdOrderByCreatedDate(creatorId);
         }
         for (Group group : groups) {
-            if (group.getStatus() != Group.Status.DELETED && group.getStatus() != Group.Status.DISABLED) {
+            if (group.getStatus() != GroupStatus.DELETED && group.getStatus() != GroupStatus.DISABLED) {
                 if (group.getTimeEnd().before(new Date())) {
-                    group.setStatus(Group.Status.OUTDATED);
+                    group.setStatus(GroupStatus.OUTDATED);
                     groupRepository.save(group);
                 }
                 if (group.getTimeStart().after(new Date())) {
-                    group.setStatus(Group.Status.INACTIVE);
+                    group.setStatus(GroupStatus.INACTIVE);
                     groupRepository.save(group);
                 }
             }
@@ -1437,8 +1375,8 @@ public class GroupServiceImpl implements GroupService {
             String groupCategoryName =
                     groupCategoryOptional.isPresent() ? groupCategoryOptional.get().getName() : "";
 
-            Map statusMap = Group.getStatusMap();
-            String status = (String) statusMap.get(group.getStatus());
+            Map<GroupStatus, String> statusMap = Group.getStatusMap();
+            String status = statusMap.get(group.getStatus());
             SimpleDateFormat dateFormat = new SimpleDateFormat("dd/MM/yyyy");
             String dateStart = dateFormat.format(group.getTimeStart());
             String dateEnd = dateFormat.format(group.getTimeEnd());
@@ -1490,22 +1428,18 @@ public class GroupServiceImpl implements GroupService {
 
         File exportFile = FileUtils.generateExcel(headers, data, remainColumnIndexes, fileName);
         Resource resource = new FileSystemResource(exportFile.getAbsolutePath());
-        ResponseEntity<Resource> response =
-                ResponseEntity.ok()
-                        .header(
-                                HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
-                        .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
-                        .contentLength(resource.getFile().length())
-                        .body(resource);
-        return response;
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
+                .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
+                .contentLength(resource.getFile().length())
+                .body(resource);
     }
 
     @Override
     public ResponseEntity<Resource> generateExportTable(String emailUser, List<String> remainColumns)
             throws IOException {
         List<Group> groups = getGroupsForAdmin(emailUser);
-        ResponseEntity<Resource> response = generateExportTable(groups, remainColumns);
-        return response;
+        return generateExportTable(groups, remainColumns);
     }
 
     @Override
@@ -1537,8 +1471,7 @@ public class GroupServiceImpl implements GroupService {
                         status,
                         0,
                         Integer.MAX_VALUE);
-        ResponseEntity<Resource> response = generateExportTable(groups.getValue(), remainColumns);
-        return response;
+        return generateExportTable(groups.getValue(), remainColumns);
     }
 
     private List<List<String>> generateExportDataMembers(String groupId, String type) {
@@ -1589,14 +1522,11 @@ public class GroupServiceImpl implements GroupService {
 
         File exportFile = FileUtils.generateExcel(headers, data, remainColumnIndexes, fileName);
         Resource resource = new FileSystemResource(exportFile.getAbsolutePath());
-        ResponseEntity<Resource> response =
-                ResponseEntity.ok()
-                        .header(
-                                HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
-                        .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
-                        .contentLength(resource.getFile().length())
-                        .body(resource);
-        return response;
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + resource.getFilename())
+                .contentType(MediaType.parseMediaType("application/vnd.ms-excel"))
+                .contentLength(resource.getFile().length())
+                .body(resource);
     }
 
     @Override
@@ -1709,9 +1639,8 @@ public class GroupServiceImpl implements GroupService {
         socketIOService.sendNewUnpinMessage(groupId, messageId);
 
         Optional<User> pinnerWrapper = userRepository.findById(userId);
-        if (!pinnerWrapper.isPresent()) {
-            notificationService.sendNewUnpinNotification(
-                    MessageDetailResponse.from(message, sender), pinnerWrapper.get());
+        if (pinnerWrapper.isEmpty()) {
+            notificationService.sendNewUnpinNotification(MessageDetailResponse.from(message, sender), pinnerWrapper.get());
         }
 
         return true;
@@ -1743,7 +1672,7 @@ public class GroupServiceImpl implements GroupService {
         socketIOService.sendNewUnpinMessage(groupId, messageId);
 
         Optional<User> pinnerWrapper = userRepository.findById(userId);
-        if (!pinnerWrapper.isPresent()) {
+        if (pinnerWrapper.isEmpty()) {
             notificationService.sendNewUnpinNotification(
                     MessageDetailResponse.from(message, sender), pinnerWrapper.get());
         }
@@ -1773,12 +1702,12 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public GroupDetailResponse getGroupWorkspace(UserPrincipal user, String groupId) {
+    public GroupDetailResponse getGroupWorkspace(CustomerUserDetails user, String groupId) {
         if (!permissionService.isUserIdInGroup(user.getId(), groupId)) {
             return null;
         }
         List<GroupDetailResponse> groupWrapper = groupRepository.getGroupDetail(groupId);
-        if (groupWrapper.size() == 0) {
+        if (groupWrapper.isEmpty()) {
             return null;
         }
         Group group = groupRepository.findById(groupId).orElse(null);
@@ -1790,56 +1719,48 @@ public class GroupServiceImpl implements GroupService {
 
         List<String> channelIds =
                 group.getChannelIds() != null ? group.getChannelIds() : new ArrayList<>();
-        List<String> privateIds =
-                group.getPrivateIds() != null ? group.getPrivateIds() : new ArrayList<>();
+        List<String> privateIds = group.getPrivateIds() != null ? group.getPrivateIds() : new ArrayList<>();
         List<GroupDetailResponse.GroupChannel> channels =
                 channelRepository.findByIdIn(channelIds).stream()
                         .map(GroupDetailResponse.GroupChannel::from)
-                        .sorted(
-                                Comparator.comparing(GroupDetailResponse.GroupChannel::getUpdatedDate).reversed())
-                        .collect(Collectors.toList());
+                        .sorted(Comparator.comparing(GroupDetailResponse.GroupChannel::getUpdatedDate).reversed())
+                        .toList();
         detail.setChannels(channels);
 
         List<GroupDetailResponse.GroupChannel> privates =
                 channelRepository
-                        .findByParentIdAndTypeAndUserIdsIn(
-                                groupId, Channel.Type.PRIVATE_MESSAGE, Collections.singletonList(user.getId()))
+                        .findByParentIdAndTypeAndUserIdsIn(groupId, ChannelType.PRIVATE_MESSAGE, Collections.singletonList(user.getId()))
                         .stream()
-                        .map(
-                                channel -> {
-                                    String userId =
-                                            channel.getUserIds().stream()
-                                                    .filter(id -> !id.equals(user.getId()))
-                                                    .findFirst()
-                                                    .orElse(null);
-                                    if (userId == null) {
-                                        return null;
-                                    }
-                                    ShortProfile penpal = userRepository.findShortProfile(userId);
-                                    if (penpal == null) {
-                                        return null;
-                                    }
-                                    channel.setName(penpal.getName());
-                                    channel.setImageUrl(penpal.getImageUrl());
+                        .map(channel -> {
+                            String userId = channel.getUserIds().stream()
+                                    .filter(id -> !id.equals(user.getId()))
+                                    .findFirst()
+                                    .orElse(null);
+                            if (userId == null) {
+                                return null;
+                            }
+                            ShortProfile penpal = userRepository.findShortProfile(userId);
+                            if (penpal == null) {
+                                return null;
+                            }
+                            channel.setName(penpal.getName());
+                            channel.setImageUrl(penpal.getImageUrl());
 
-                                    List<String> markedMentees =
-                                            group.getMarkedMenteeIds() != null
-                                                    ? group.getMarkedMenteeIds()
-                                                    : new ArrayList<>();
-                                    return GroupDetailResponse.GroupChannel.from(
-                                            channel, markedMentees.contains(penpal.getId()));
-                                })
+                            List<String> markedMentees = group.getMarkedMenteeIds() != null
+                                    ? group.getMarkedMenteeIds()
+                                    : new ArrayList<>();
+                            return GroupDetailResponse.GroupChannel.from(channel, markedMentees.contains(penpal.getId()));
+                        })
                         .filter(Objects::nonNull)
-                        .sorted(
-                                Comparator.comparing(GroupDetailResponse.GroupChannel::getUpdatedDate).reversed())
+                        .sorted(Comparator.comparing(GroupDetailResponse.GroupChannel::getUpdatedDate).reversed())
                         .sorted(Comparator.comparing(GroupDetailResponse.GroupChannel::getMarked).reversed())
-                        .collect(Collectors.toList());
+                        .toList();
         detail.setPrivates(privates);
         return detail;
     }
 
     @Override
-    public boolean markMentee(UserPrincipal user, String groupId, String menteeId) {
+    public boolean markMentee(CustomerUserDetails user, String groupId, String menteeId) {
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         Group group = null;
         if (!groupWrapper.isPresent()) {
@@ -1867,7 +1788,7 @@ public class GroupServiceImpl implements GroupService {
     }
 
     @Override
-    public boolean unmarkMentee(UserPrincipal user, String groupId, String menteeId) {
+    public boolean unmarkMentee(CustomerUserDetails user, String groupId, String menteeId) {
         Optional<Group> groupWrapper = groupRepository.findById(groupId);
         Group group = null;
         if (!groupWrapper.isPresent()) {
@@ -1900,14 +1821,14 @@ public class GroupServiceImpl implements GroupService {
      * @return List<GroupForwardResponse>
      */
     @Override
-    public List<ChannelForwardResponse> getGroupForwards(UserPrincipal user, Optional<String> name) throws ServerException, InsufficientDataException, ErrorResponseException, IOException, NoSuchAlgorithmException, InvalidKeyException, InvalidResponseException, XmlParserException, InternalException {
+    public List<ChannelForwardResponse> getGroupForwards(CustomerUserDetails user, Optional<String> name) throws ServerException, InsufficientDataException, ErrorResponseException, IOException, NoSuchAlgorithmException, InvalidKeyException, InvalidResponseException, XmlParserException, InternalException {
         List<Group> groups = groupRepository.findByMenteesContainsOrMentorsContains(user.getId(), user.getId());
-        groups = groups.stream().filter(group -> group.getStatus() == Group.Status.ACTIVE).toList();
+        groups = groups.stream().filter(group -> group.getStatus() == GroupStatus.ACTIVE).toList();
         var listChannelIds = groups.stream().map(Group::getChannelIds).toList();
         List<String> lstChannelIds = new ArrayList<>();
-       for(List<String> ids: listChannelIds){
-           lstChannelIds.addAll(ids);
-       }
+        for (List<String> ids : listChannelIds) {
+            lstChannelIds.addAll(ids);
+        }
         List<Channel> channels = channelRepository.findByIdIn(lstChannelIds);
 
         List<GroupForwardResponse> groupForwardResponses = new ArrayList<>();
@@ -1926,7 +1847,7 @@ public class GroupServiceImpl implements GroupService {
         }
 
         for (Channel channel : channels) {
-            if(channel.getStatus() == Channel.Status.ACTIVE){
+            if (channel.getStatus() == ChannelStatus.ACTIVE) {
                 ChannelForwardResponse channelForwardResponse = ChannelForwardResponse.from(channel);
 
                 channelForwardResponse.setGroup(groupForwardResponses.stream().filter(groupForwardResponse -> groupForwardResponse.getId().equals(channel.getParentId())).findFirst().orElse(null));
@@ -1935,9 +1856,33 @@ public class GroupServiceImpl implements GroupService {
         }
 
         if (name.isPresent() && !name.get().isEmpty()) {
-            channelForwardResponses = channelForwardResponses.stream().filter(channelForwardResponse -> channelForwardResponse.getName().contains(name.get())).collect(Collectors.toList());
+            channelForwardResponses = channelForwardResponses.stream().filter(channelForwardResponse -> channelForwardResponse.getName().contains(name.get())).toList();
         }
 
         return channelForwardResponses.stream().sorted(Comparator.comparing(ChannelForwardResponse::getGroupName)).toList();
+    }
+
+    /**
+     * @param request UpdateGroupImageRequest
+     */
+    @Override
+    @SneakyThrows
+    public void updateGroupImage(UpdateGroupImageRequest request) {
+        Optional<Group> groupWrapper = groupRepository.findById(request.getGroupId());
+        if (groupWrapper.isEmpty()) {
+            throw new DomainException("Group not found");
+        }
+        var tika = new Tika();
+        var key = blobStorage.generateBlobKey(tika.detect(request.getFile().getBytes()));
+        try{
+            blobStorage.post(request.getFile(), key);
+            logger.log(Level.INFO,"[*] Upload group image success");
+        } catch (Exception e) {
+            logger.error(e);
+            throw new DomainException("Upload group image failed");
+        }
+        Group group = groupWrapper.get();
+        group.setImageUrl(key);
+        groupRepository.save(group);
     }
 }
