@@ -1,10 +1,6 @@
 package com.hcmus.mentor.backend.service.impl;
 
-import static com.hcmus.mentor.backend.domain.Notif.Type.*;
-
 import com.google.firebase.messaging.FirebaseMessagingException;
-import com.google.firebase.messaging.Notification;
-import com.hcmus.mentor.backend.domain.*;
 import com.hcmus.mentor.backend.controller.payload.request.AddNotificationRequest;
 import com.hcmus.mentor.backend.controller.payload.request.RescheduleMeetingRequest;
 import com.hcmus.mentor.backend.controller.payload.request.SubscribeNotificationRequest;
@@ -14,17 +10,10 @@ import com.hcmus.mentor.backend.controller.payload.response.messages.ReactMessag
 import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskAssigneeResponse;
 import com.hcmus.mentor.backend.controller.payload.response.tasks.TaskMessageResponse;
 import com.hcmus.mentor.backend.controller.payload.response.users.ShortProfile;
-import com.hcmus.mentor.backend.repository.ChannelRepository;
-import com.hcmus.mentor.backend.repository.GroupRepository;
-import com.hcmus.mentor.backend.repository.NotificationRepository;
-import com.hcmus.mentor.backend.repository.NotificationSubscriberRepository;
-import com.hcmus.mentor.backend.repository.UserRepository;
+import com.hcmus.mentor.backend.domain.*;
+import com.hcmus.mentor.backend.domain.constant.NotificationType;
+import com.hcmus.mentor.backend.repository.*;
 import com.hcmus.mentor.backend.service.NotificationService;
-
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -35,11 +24,18 @@ import org.springframework.data.domain.Sort;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static com.hcmus.mentor.backend.domain.constant.ChannelType.PRIVATE_MESSAGE;
+import static com.hcmus.mentor.backend.domain.constant.NotificationType.*;
+
 @Service
 @RequiredArgsConstructor
 public class NotificationServiceImpl implements NotificationService {
 
-    private static final Logger LOGGER = LogManager.getLogger(NotificationServiceImpl.class);
+    private static final Logger logger = LogManager.getLogger(NotificationServiceImpl.class);
     private final NotificationRepository notificationRepository;
     private final NotificationSubscriberRepository notificationSubscriberRepository;
     private final GroupRepository groupRepository;
@@ -50,24 +46,18 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     public Map<String, Object> getOwnNotifications(String userId, int page, int size) {
         PageRequest paging = PageRequest.of(page, size, Sort.by("createdDate").descending());
-        Slice<Notif> slice =
-                notificationRepository.findByReceiverIdsIn(Collections.singletonList(userId), paging);
-        List<String> senderIds = slice.get().map(Notif::getSenderId).collect(Collectors.toList());
-        Map<String, ShortProfile> senders =
-                userRepository.findByIds(senderIds).stream()
-                        .collect(Collectors.toMap(ShortProfile::getId, profile -> profile, (p1, p2) -> p2));
-        List<NotificationResponse> notifications =
-                slice.getContent().stream()
-                        .map(
-                                notification ->
-                                        NotificationResponse.from(
-                                                notification, senders.getOrDefault(notification.getSenderId(), null)))
-                        .collect(Collectors.toList());
+        Slice<Notification> slice = notificationRepository.findByReceiverIdsIn(Collections.singletonList(userId), paging);
+        List<String> senderIds = slice.get().map(Notification::getSenderId).toList();
+        Map<String, ShortProfile> senders = userRepository.findByIds(senderIds).stream()
+                .collect(Collectors.toMap(ShortProfile::getId, profile -> profile, (p1, p2) -> p2));
+        List<NotificationResponse> notifications = slice.getContent().stream()
+                .map(notification -> NotificationResponse.from(notification, senders.getOrDefault(notification.getSenderId(), null)))
+                .toList();
         return pagingResponse(slice, notifications);
     }
 
     private Map<String, Object> pagingResponse(
-            Slice<Notif> slice, List<NotificationResponse> notifications) {
+            Slice<Notification> slice, List<NotificationResponse> notifications) {
         Map<String, Object> response = new HashMap<>();
         response.put("notifications", notifications);
         response.put("hasMore", slice.hasNext());
@@ -75,28 +65,27 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
-    public Notif createResponseNotification(String senderId, AddNotificationRequest request) {
-        Notif notif =
-                Notif.builder()
-                        .title(request.getTitle())
-                        .content(request.getContent())
-                        .type(Notif.Type.NEED_RESPONSE)
-                        .senderId(senderId)
-                        .receiverIds(Collections.singletonList(request.getReceiverId()))
-                        .createdDate(request.getCreatedDate())
-                        .build();
+    public Notification createResponseNotification(String senderId, AddNotificationRequest request) {
+        Notification notif = Notification.builder()
+                .title(request.getTitle())
+                .content(request.getContent())
+                .type(NotificationType.NEED_RESPONSE)
+                .senderId(senderId)
+                .receiverIds(Collections.singletonList(request.getReceiverId()))
+                .createdDate(request.getCreatedDate())
+                .build();
         return notificationRepository.save(notif);
     }
 
     @Override
-    public Notif responseNotification(String userId, String notificationId, String action) {
-        Optional<Notif> notificationWrapper = notificationRepository.findById(notificationId);
+    public Notification responseNotification(String userId, String notificationId, String action) {
+        Optional<Notification> notificationWrapper = notificationRepository.findById(notificationId);
         if (!notificationWrapper.isPresent()) {
             return null;
         }
 
-        Notif notif = notificationWrapper.get();
-        if (!notif.getType().equals(Notif.Type.NEED_RESPONSE)) {
+        Notification notif = notificationWrapper.get();
+        if (!notif.getType().equals(NotificationType.NEED_RESPONSE)) {
             return null;
         }
 
@@ -125,18 +114,15 @@ public class NotificationServiceImpl implements NotificationService {
         unsubscribeNotification(request.getUserId());
 
         if (request.getToken().isEmpty()) {
-            LOGGER.info("[*] Unsubscribe user notification: userID({})", request.getUserId());
+            logger.info("[*] Unsubscribe user notification: userID({})", request.getUserId());
             return;
         }
-        LOGGER.info(
-                "[*] Subscribe user notification: userID({}) | Token({})",
-                request.getUserId(),
-                request.getToken());
+        logger.info("[*] Subscribe user notification: userID({}) | Token({})", request.getUserId(), request.getToken());
 
         List<NotificationSubscriber> subscribes =
                 notificationSubscriberRepository.findByUserIdOrToken(
                         request.getUserId(), request.getToken());
-        if (subscribes.size() == 0) {
+        if (subscribes.isEmpty()) {
             NotificationSubscriber subscriber =
                     NotificationSubscriber.builder()
                             .userId(request.getUserId())
@@ -170,23 +156,20 @@ public class NotificationServiceImpl implements NotificationService {
 
             Channel channel = channelWrapper.get();
             Group parentGroup = groupRepository.findById(channel.getParentId()).orElse(null);
-            title =
-                    Channel.Type.PRIVATE_MESSAGE.equals(channel.getType())
-                            ? parentGroup.getName() + "\n" + message.getSender().getName()
-                            : channel.getName();
-            members =
-                    channel.getUserIds().stream()
-                            .filter(id -> !id.equals(message.getSender().getId()))
-                            .distinct()
-                            .collect(Collectors.toList());
+            title = PRIVATE_MESSAGE.equals(channel.getType())
+                    ? parentGroup.getName() + "\n" + message.getSender().getName()
+                    : channel.getName();
+            members = channel.getUserIds().stream()
+                    .filter(id -> !id.equals(message.getSender().getId()))
+                    .distinct()
+                    .toList();
         } else {
             Group group = groupWrapper.get();
             title = group.getName();
-            members =
-                    Stream.concat(group.getMentors().stream(), group.getMentees().stream())
-                            .filter(id -> !id.equals(message.getSender().getId()))
-                            .distinct()
-                            .collect(Collectors.toList());
+            members = Stream.concat(group.getMentors().stream(), group.getMentees().stream())
+                    .filter(id -> !id.equals(message.getSender().getId()))
+                    .distinct()
+                    .toList();
         }
 
         if (members.isEmpty()) {
@@ -215,7 +198,7 @@ public class NotificationServiceImpl implements NotificationService {
         }
     }
 
-    private Map<String, String> attachDataNotification(String groupId, Notif.Type type) {
+    private Map<String, String> attachDataNotification(String groupId, NotificationType type) {
         Map<String, String> data = new HashMap<>();
         data.put("type", type.name());
         data.put("screen", "chat");
@@ -227,7 +210,7 @@ public class NotificationServiceImpl implements NotificationService {
     @Async
     public void sendNewTaskNotification(MessageDetailResponse message) {
         if (message.getTask() == null) {
-            LOGGER.warn("[!] Task message #{}, NULL cannot send notifications", message.getId());
+            logger.warn("[!] Task message #{}, NULL cannot send notifications", message.getId());
             return;
         }
         TaskMessageResponse task = message.getTask();
@@ -240,7 +223,7 @@ public class NotificationServiceImpl implements NotificationService {
 
         String title = group.getName();
         String content = "Nhóm có công việc mới \"" + task.getTitle() + "\"";
-        Notif notif = createNewTaskNotification(title, content, message.getSender().getId(), task);
+        Notification notif = createNewTaskNotification(title, content, message.getSender().getId(), task);
         try {
             firebaseMessagingManager.sendGroupNotification(
                     notif.getReceiverIds(),
@@ -253,16 +236,16 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
-    public Notif createNewTaskNotification(
+    public Notification createNewTaskNotification(
             String title, String content, String senderId, TaskMessageResponse task) {
         List<String> assigneeIds =
-                task.getAssignees().stream().map(TaskAssigneeResponse::getId).collect(Collectors.toList());
+                task.getAssignees().stream().map(TaskAssigneeResponse::getId).toList();
         List<String> receiverIds =
                 Stream.concat(assigneeIds.stream(), Stream.of(task.getAssignerId()))
                         .distinct()
-                        .collect(Collectors.toList());
-        Notif inAppNotification =
-                Notif.builder()
+                        .toList();
+        Notification inAppNotification =
+                Notification.builder()
                         .title(title)
                         .content(content)
                         .type(NEW_TASK)
@@ -277,7 +260,7 @@ public class NotificationServiceImpl implements NotificationService {
     @Async
     public void sendNewMeetingNotification(MessageDetailResponse message) {
         if (message.getMeeting() == null) {
-            LOGGER.warn("[!] Meeting message #{}, NULL cannot send notifications", message.getId());
+            logger.warn("[!] Meeting message #{}, NULL cannot send notifications", message.getId());
             return;
         }
         Meeting meeting = message.getMeeting();
@@ -290,7 +273,7 @@ public class NotificationServiceImpl implements NotificationService {
 
         String title = group.getName();
         String content = "Nhóm có lịch hẹn mới \"" + meeting.getTitle() + "\"";
-        Notif notif =
+        Notification notif =
                 createNewMeetingNotification(title, content, message.getSender().getId(), meeting);
         try {
             firebaseMessagingManager.sendGroupNotification(
@@ -304,14 +287,14 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
-    public Notif createNewMeetingNotification(
+    public Notification createNewMeetingNotification(
             String title, String content, String senderId, Meeting meeting) {
         List<String> receiverIds =
                 Stream.concat(meeting.getAttendees().stream(), Stream.of(meeting.getOrganizerId()))
                         .distinct()
-                        .collect(Collectors.toList());
-        Notif notif =
-                Notif.builder()
+                        .toList();
+        Notification notif =
+                Notification.builder()
                         .title(title)
                         .content(content)
                         .type(NEW_MEETING)
@@ -325,56 +308,50 @@ public class NotificationServiceImpl implements NotificationService {
     @Override
     @Async
     public void sendNewMediaMessageNotification(MessageDetailResponse message) {
-        boolean isImageMessage =
-                Message.Type.IMAGE.equals(message.getType())
-                        && message.getImages() != null
-                        && message.getImages().size() != 0;
-        boolean isFileMessage =
-                Message.Type.FILE.equals(message.getType()) && message.getFile() != null;
+        boolean isImageMessage = Message.Type.IMAGE.equals(message.getType())
+                && message.getImages() != null
+                && !message.getImages().isEmpty();
+        boolean isFileMessage = Message.Type.FILE.equals(message.getType()) && message.getFile() != null;
         if (!isImageMessage && !isFileMessage) {
-            LOGGER.warn("[!] Media message #{}, empty cannot send notifications", message.getId());
+            logger.warn("[!] Media message #{}, empty cannot send notifications", message.getId());
             return;
         }
+
 
         String title;
         List<String> members;
 
         Optional<Group> groupWrapper = groupRepository.findById(message.getGroupId());
-        if (!groupWrapper.isPresent()) {
+        if (groupWrapper.isEmpty()) {
             Optional<Channel> channelWrapper = channelRepository.findById(message.getGroupId());
-            if (!channelWrapper.isPresent()) {
+            if (channelWrapper.isEmpty()) {
                 return;
             }
 
             Channel channel = channelWrapper.get();
             Group parentGroup = groupRepository.findById(channel.getParentId()).orElse(null);
-            title =
-                    Channel.Type.PRIVATE_MESSAGE.equals(channel.getType())
-                            ? parentGroup.getName() + "\n" + message.getSender().getName()
-                            : channel.getName();
-            members =
-                    channel.getUserIds().stream()
-                            .filter(id -> !id.equals(message.getSender().getId()))
-                            .distinct()
-                            .collect(Collectors.toList());
+            title = PRIVATE_MESSAGE.equals(channel.getType())
+                    ? parentGroup.getName() + "\n" + message.getSender().getName()
+                    : channel.getName();
+            members = channel.getUserIds().stream()
+                    .filter(id -> !id.equals(message.getSender().getId()))
+                    .distinct()
+                    .toList();
         } else {
             Group group = groupWrapper.get();
             title = group.getName();
-            members =
-                    Stream.concat(group.getMentors().stream(), group.getMentees().stream())
-                            .filter(id -> !id.equals(message.getSender().getId()))
-                            .distinct()
-                            .collect(Collectors.toList());
+            members = Stream.concat(group.getMentors().stream(), group.getMentees().stream())
+                    .filter(id -> !id.equals(message.getSender().getId()))
+                    .distinct()
+                    .toList();
         }
 
         if (members.isEmpty()) {
             return;
         }
 
-        Notif.Type type;
-        StringBuilder notificationBody =
-                new StringBuilder(
-                        (message.getSender() != null) ? (message.getSender().getName() + " đã gửi ") : "");
+        NotificationType type;
+        StringBuilder notificationBody = new StringBuilder((message.getSender() != null) ? (message.getSender().getName() + " đã gửi ") : "");
         if (Message.Type.IMAGE.equals(message.getType())) {
             type = NEW_IMAGE_MESSAGE;
             notificationBody.append(message.getImages().size()).append(" ảnh mới.");
@@ -388,23 +365,22 @@ public class NotificationServiceImpl implements NotificationService {
 
         String body = notificationBody.toString();
         try {
-            firebaseMessagingManager.sendGroupNotification(
-                    members, title, body, attachDataNotification(message.getGroupId(), type));
+            firebaseMessagingManager.sendGroupNotification(members, title, body, attachDataNotification(message.getGroupId(), type));
         } catch (FirebaseMessagingException e) {
-            e.printStackTrace();
+            logger.error("Error sending media message notification", e);
         }
     }
 
     @Override
-    public Notif createNewMediaNotification(
+    public Notification createNewMediaNotification(
             String title, String content, String senderId, Group group) {
         List<String> receiverIds =
                 Stream.concat(group.getMentors().stream(), group.getMentees().stream())
                         .filter(id -> !id.equals(senderId))
                         .distinct()
-                        .collect(Collectors.toList());
-        Notif notif =
-                Notif.builder()
+                        .toList();
+        Notification notif =
+                Notification.builder()
                         .title(title)
                         .content(content)
                         .type(NEW_FILE_MESSAGE)
@@ -438,8 +414,8 @@ public class NotificationServiceImpl implements NotificationService {
         Group group = groupWrapper.get();
 
         Map<String, String> data = attachDataNotification(message.getGroupId(), NEW_REACTION);
-        Notification notification =
-                Notification.builder()
+        com.google.firebase.messaging.Notification notification =
+                com.google.firebase.messaging.Notification.builder()
                         .setTitle(group.getName())
                         .setBody(reaction.getName() + " đã thể hiện cảm xúc tin nhắn của bạn.")
                         .build();
@@ -472,7 +448,7 @@ public class NotificationServiceImpl implements NotificationService {
 
         String title = group.getName();
         String content = "Lịch hẹn: \"" + meeting.getTitle() + "\" đã được dời thời gian.";
-        Notif notif = createRescheduleMeetingNotification(title, content, modifierId, group, meeting);
+        Notification notif = createRescheduleMeetingNotification(title, content, modifierId, group, meeting);
         try {
             firebaseMessagingManager.sendGroupNotification(
                     notif.getReceiverIds(),
@@ -485,15 +461,15 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
-    public Notif createRescheduleMeetingNotification(
+    public Notification createRescheduleMeetingNotification(
             String title, String content, String senderId, Group group, Meeting meeting) {
         List<String> receiverIds =
                 Stream.concat(group.getMentors().stream(), group.getMentees().stream())
                         .filter(id -> !id.equals(senderId))
                         .distinct()
-                        .collect(Collectors.toList());
-        Notif notif =
-                Notif.builder()
+                        .toList();
+        Notification notif =
+                Notification.builder()
                         .title(title)
                         .content(content)
                         .type(RESCHEDULE_MEETING)
@@ -524,7 +500,7 @@ public class NotificationServiceImpl implements NotificationService {
 
         String title = group.getName();
         String content = "Nhóm có cuộc bình chọn mới \"" + vote.getQuestion() + "\"";
-        Notif notif = createNewVoteNotification(title, content, creatorId, group, vote);
+        Notification notif = createNewVoteNotification(title, content, creatorId, group, vote);
         try {
             firebaseMessagingManager.sendGroupNotification(
                     notif.getReceiverIds(),
@@ -537,15 +513,15 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
-    public Notif createNewVoteNotification(
+    public Notification createNewVoteNotification(
             String title, String content, String senderId, Group group, Vote vote) {
         List<String> receiverIds =
                 Stream.concat(group.getMentors().stream(), group.getMentees().stream())
                         .filter(id -> !id.equals(senderId))
                         .distinct()
-                        .collect(Collectors.toList());
-        Notif notif =
-                Notif.builder()
+                        .toList();
+        Notification notif =
+                Notification.builder()
                         .title(title)
                         .content(content)
                         .type(NEW_VOTE)
@@ -570,23 +546,21 @@ public class NotificationServiceImpl implements NotificationService {
         List<String> members;
 
         Optional<Group> groupWrapper = groupRepository.findById(message.getGroupId());
-        if (!groupWrapper.isPresent()) {
+        if (groupWrapper.isEmpty()) {
             Optional<Channel> channelWrapper = channelRepository.findById(message.getGroupId());
-            if (!channelWrapper.isPresent()) {
+            if (channelWrapper.isEmpty()) {
                 return;
             }
 
             Channel channel = channelWrapper.get();
             Group parentGroup = groupRepository.findById(channel.getParentId()).orElse(null);
-            title =
-                    Channel.Type.PRIVATE_MESSAGE.equals(channel.getType())
-                            ? parentGroup.getName() + "\n" + message.getSender().getName()
-                            : channel.getName();
-            members =
-                    channel.getUserIds().stream()
-                            .filter(id -> !id.equals(message.getSender().getId()))
-                            .distinct()
-                            .collect(Collectors.toList());
+            title = PRIVATE_MESSAGE.equals(channel.getType())
+                    ? parentGroup.getName() + "\n" + message.getSender().getName()
+                    : channel.getName();
+            members = channel.getUserIds().stream()
+                    .filter(id -> !id.equals(message.getSender().getId()))
+                    .distinct()
+                    .toList();
         } else {
             Group group = groupWrapper.get();
             title = group.getName();
@@ -594,7 +568,7 @@ public class NotificationServiceImpl implements NotificationService {
                     Stream.concat(group.getMentors().stream(), group.getMentees().stream())
                             .filter(id -> !id.equals(message.getSender().getId()))
                             .distinct()
-                            .collect(Collectors.toList());
+                            .toList();
         }
 
         if (members.isEmpty()) {
@@ -606,7 +580,6 @@ public class NotificationServiceImpl implements NotificationService {
                 Jsoup.parse(message.getContent().substring(0, Math.min(message.getContent().length(), 25)))
                         .text();
         String content = pinner.getName() + " đã ghim tin nhắn \"" + shortMessage + "\"";
-        //        groupService.updateLastMessage(group.getId(), content);
         try {
             firebaseMessagingManager.sendGroupNotification(members, title, content, data);
         } catch (FirebaseMessagingException e) {
@@ -637,14 +610,14 @@ public class NotificationServiceImpl implements NotificationService {
             Channel channel = channelWrapper.get();
             Group parentGroup = groupRepository.findById(channel.getParentId()).orElse(null);
             title =
-                    Channel.Type.PRIVATE_MESSAGE.equals(channel.getType())
+                    PRIVATE_MESSAGE.equals(channel.getType())
                             ? parentGroup.getName() + "\n" + message.getSender().getName()
                             : channel.getName();
             members =
                     channel.getUserIds().stream()
                             .filter(id -> !id.equals(message.getSender().getId()))
                             .distinct()
-                            .collect(Collectors.toList());
+                            .toList();
         } else {
             Group group = groupWrapper.get();
             title = group.getName();
@@ -652,7 +625,7 @@ public class NotificationServiceImpl implements NotificationService {
                     Stream.concat(group.getMentors().stream(), group.getMentees().stream())
                             .filter(id -> !id.equals(message.getSender().getId()))
                             .distinct()
-                            .collect(Collectors.toList());
+                            .toList();
         }
 
         if (members.isEmpty()) {
@@ -664,11 +637,84 @@ public class NotificationServiceImpl implements NotificationService {
                 Jsoup.parse(message.getContent().substring(0, Math.min(message.getContent().length(), 25)))
                         .text();
         String content = pinner.getName() + " đã bỏ ghim tin nhắn \"" + shortMessage + "\"";
-        //        groupService.updateLastMessage(group.getId(), content);
         try {
             firebaseMessagingManager.sendGroupNotification(members, title, content, data);
         } catch (FirebaseMessagingException e) {
             e.printStackTrace();
         }
+    }
+
+    /**
+     * @param title    Title of notification
+     * @param content  Content of notification
+     * @param senderId Sender
+     * @param group    Group
+     * @return A notification
+     */
+    @Override
+    public Notification createForwardNotification(String title, String content, String senderId, Group group) {
+        List<String> receiverIds = Stream.concat(group.getMentors().stream(), group.getMentees().stream())
+                .filter(id -> !id.equals(senderId))
+                .distinct()
+                .toList();
+
+        Notification notif = Notification.builder()
+                .title(title)
+                .content(content)
+                .type(FORWARD)
+                .senderId(senderId)
+                .refId(group.getId())
+                .receiverIds(receiverIds)
+                .build();
+        return notificationRepository.save(notif);
+    }
+
+    /**
+     * @param message Message to be sent
+     * @param groupId Group identifier
+     */
+    @Override
+    public void sendForwardNotification(MessageDetailResponse message, String groupId) {
+        if (message == null || groupId == null) {
+            return;
+        }
+
+        String title;
+        List<String> members;
+
+        Optional<Group> groupWrapper = groupRepository.findById(groupId);
+        if (groupWrapper.isEmpty()) {
+            Optional<Channel> channelWrapper = channelRepository.findById(groupId);
+            if (channelWrapper.isEmpty()) {
+                return;
+            }
+
+            Channel channel = channelWrapper.get();
+            Group parentGroup = groupRepository.findById(channel.getParentId()).orElse(null);
+            title = PRIVATE_MESSAGE.equals(channel.getType()) ? parentGroup.getName() + "\n" + message.getSender().getName() : channel.getName();
+            members = channel.getUserIds().stream().filter(id -> !id.equals(message.getSender().getId())).distinct().collect(Collectors.toList());
+        } else {
+            Group group = groupWrapper.get();
+            title = group.getName();
+            members = Stream.concat(group.getMentors().stream(), group.getMentees().stream()).filter(id -> !id.equals(message.getSender().getId())).distinct().collect(Collectors.toList());
+        }
+
+        if (members.isEmpty()) {
+            return;
+        }
+
+        Map<String, String> data = attachDataNotification(groupId, FORWARD);
+        String shortMessage = Jsoup.parse(message.getContent().substring(0, Math.min(message.getContent().length(), 25))).text();
+        String content = message.getSender().getName() + " đã chuyển tiếp tin nhắn \"" + shortMessage + "\"";
+        try {
+            logger.debug("[*] Send forward notification to group {}", groupId);
+            logger.debug("[*] Title: {}", title);
+            logger.debug("[*] Content: {}", content);
+            logger.debug("[*] Data: {}", data);
+            firebaseMessagingManager.sendGroupNotification(members, title, content, data);
+        } catch (FirebaseMessagingException e) {
+            e.printStackTrace();
+        }
+
     }
 }
